--- a/ERB/게임_내_전투처리/촉수데이터/악질시민/CITIZEN_1.ERB
+++ b/ERB/게임_내_전투처리/촉수데이터/악질시민/CITIZEN_1.ERB
@@ -183,7 +183,7 @@ ELSEIF LOCAL < 80
 		ENDIF
 	ENDIF
 ;씨받이 교배
-ELSEIF (LOCAL < 95 || (TFLAG:20 == 3 && LOCAL < 90) || (TCVAR:12 & 배란) > 0) && CHECK_HOLYVIRGIN_F()==0
+ELSEIF (LOCAL < 95 || (TFLAG:20 == 3 && LOCAL < 90) || (TCVARn:12 & 배란) > 0) && CHECK_HOLYVIRGIN_F()==0
 	IF CLOTH_OUTER_PER > 90 || CLOTH_INNER_PER >= CLOTH_INNER_DEF
 		RETURN 14
 	ELSE
