--- a/ERB/지문/MESSAGE_OTHER.ERB
+++ b/ERB/지문/MESSAGE_OTHER.ERB
@@ -105,6 +105,26 @@ RESETCOLOR
 
 
 
+;세뇌/흑화 캐릭터가 조작 캐릭터의 반격 태세를 봤다		
+;----------------------------------------------------------
+@MESSAGE_OTHER_BATTLE_CHARA_HANGEKI
+;구상
+SETCOLOR 96, 96, 96
+TRYCALLFORM KOJO_ROOT(CFLAG:(FLAG:111):6, "OTHER_BATTLE_CHARA_HANGEKI")
+RESETCOLOR
+
+
+
+;세뇌/흑화 캐릭터가 조작 캐릭터의 강화 반격 태세를 봤다		
+;----------------------------------------------------------
+@MESSAGE_OTHER_BATTLE_CHARA_HANGEKI_EX
+;구상
+SETCOLOR 96, 96, 96
+TRYCALLFORM KOJO_ROOT(CFLAG:(FLAG:111):6, "OTHER_BATTLE_CHARA_HANGEKI_EX")
+RESETCOLOR
+
+
+
 ;세뇌/흑화 캐릭터가 조작 캐릭터의「거리를벌린다」를 봤다		
 ;----------------------------------------------------------
 @MESSAGE_OTHER_BATTLE_CHARA_TAKEAWAY
@@ -364,6 +384,40 @@ RESETCOLOR
 SETCOLOR 96, 96, 96
 TRYCALLFORM KOJO_ROOT(CFLAG:(FLAG:111):6, "OTHER_BATTLE_TENTACLE_ATTACK_GRAZE")
 RESETCOLOR
+
+
+
+
+;세뇌/흑화 캐릭터의 공격이 방어됐다
+;----------------------------------------------------------
+@MESSAGE_OTHER_BATTLE_TENTACLE_ATTACK_GUARD
+;구상
+SETCOLOR 96, 96, 96
+TRYCALLFORM KOJO_ROOT(CFLAG:(FLAG:111):6, "OTHER_BATTLE_TENTACLE_ATTACK_GUARD")
+RESETCOLOR
+
+
+
+
+;세뇌/흑화 캐릭터의 공격이 절대 방어됐다
+;----------------------------------------------------------
+@MESSAGE_OTHER_BATTLE_TENTACLE_ATTACK_PERFECT_GUARD
+;구상
+SETCOLOR 96, 96, 96
+TRYCALLFORM KOJO_ROOT(CFLAG:(FLAG:111):6, "OTHER_BATTLE_TENTACLE_ATTACK_PERFECT_GUARD")
+RESETCOLOR
+
+
+
+
+;세뇌/흑화 캐릭터가 조작 캐릭터의 에너지 과잉 축적을 봤다
+;----------------------------------------------------------
+@MESSAGE_OTHER_BATTLE_TENTACLE_ATTACK_OVERCHARGE
+;구상
+SETCOLOR 96, 96, 96
+TRYCALLFORM KOJO_ROOT(CFLAG:(FLAG:111):6, "OTHER_BATTLE_TENTACLE_ATTACK_OVERCHARGE")
+RESETCOLOR
+
 
 
 
