--- a/ERB/캐릭터관련/CHARA_STATE_CHANGE.ERB
+++ b/ERB/캐릭터관련/CHARA_STATE_CHANGE.ERB
@@ -12,10 +12,18 @@ SIF CFLAG:1 == 2
 ;FEAT 효과로 인한 상태 이상 무효
 SIF TALENT:타고난전사 > 0
 	RETURN 0
-SIF TALENT:축복 > 0 && ARG < 100 && RAND:2 == 0
-	RETURN 0
 LOCAL:0 = 0
+;본래 조건문에 ARG < 100 도 있었는데, 100% 확률은 확정으로 걸린다고 하려는 의도였던 것 같다
+;근데 이 함수는 피해량에 따른 기절이라 ARG가 피해량 수치 그대로 넘어와서 거의 모든 상황에서 적용이 안 되므로 제외했다
+SIF TALENT:축복 > 0 && RAND:2 == 0
+	RETURN 0
 CALL PERCENT_CAL, ARG, MAXBASE:체력
+;절대 방어일 경우 상태 이상 무효
+SIF TCVARn:200 > 0
+	RETURN 0
+;반격or강화 반격의 경우 피해량이 최대 체력의 20% 이하라면 기절에 면역
+SIF TCVARn:2 == 자세：반격 || TCVAR:2 == 자세：강화반격 && RESULT <= 20
+	RETURN 0
 SIF RESULT >= 30
 	LOCAL:0 += MAX(RESULT - 30, 0) / 4
 IF CFLAG:99 >= 20
@@ -25,10 +33,10 @@ ELSEIF CFLAG:99 >= 10
 ENDIF
 LOCAL:0 = LIMIT(LOCAL:0,0,50)
 IF RAND:150 < LOCAL:0
-	PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 너무 강한 대미지를 입어 
+	PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 너무 강한 피해를 입어 
 	FONTBOLD
 	SETCOLOR 250,180,50
-	PRINT [기절]
+	PRINT [기절] 
 	RESETCOLOR
 	FONTREGULAR
 	PRINTL 해 버렸다!
@@ -62,7 +70,7 @@ IF (RAND:100 < MIN(ARG * ARG * 4 + LOCAL:1 * 4, 75) || (TCVARn:12 & 발정)) && 
 	PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 절정의 여운으로 
 	FONTBOLD
 	SETCOLOR 255,182,193
-	PRINT [황홀]
+	PRINT [황홀] 
 	RESETCOLOR
 	FONTREGULAR
 	PRINTL 상태가 되어 버렸다!
@@ -79,7 +87,7 @@ IF RAND:100 < ARG * ARG * 8 && (TCVARn:12 & 기절) == 0 && (TCVARn:12 & 황홀)
 	PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 격렬한 절정에 의해 
 	FONTBOLD
 	SETCOLOR 250,180,50
-	PRINT [기절]
+	PRINT [기절] 
 	RESETCOLOR
 	FONTREGULAR
 	PRINTL 해 버렸다!
@@ -99,10 +107,10 @@ $SKIP_2
 SIF TALENT:축복 > 0 && ARG < 100 && RAND:2 == 0
 	GOTO SKIP_3
 IF RAND:100 < ARG * ARG * 12 + 5 && (TCVARn:12 & 쓰러짐) == 0
-	PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%
+	PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 
 	FONTBOLD
 	SETCOLOR 150,0,250
-	PRINT [쓰러짐]
+	PRINT [쓰러짐] 
 	RESETCOLOR
 	FONTREGULAR
 	PRINTL 상태가 되어 버렸다!
@@ -128,11 +136,14 @@ SIF TALENT:타고난전사 > 0
 	GOTO SKIP_1
 SIF TALENT:축복 > 0 && RAND:2 == 0
 	GOTO SKIP_2
+;절대 방어일 경우 상태 이상 무효
+SIF TCVARn:200 > 0
+	GOTO SKIP_2
 IF RAND:100 < 10 && (TCVARn:12 & 기절) == 0
 	PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 전류의 충격으로 인해 
 	FONTBOLD
 	SETCOLOR 250,180,50
-	PRINT [기절]
+	PRINT [기절] 
 	RESETCOLOR
 	FONTREGULAR
 	PRINTL 해 버렸다!
@@ -155,7 +166,7 @@ IF RAND:100 < 75 && (TCVARn:12 & 마비) == 0
 	PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 온몸이 
 	FONTBOLD
 	SETCOLOR 250,250,0
-	PRINT [마비]
+	PRINT [마비] 
 	RESETCOLOR
 	FONTREGULAR
 	PRINTL 되어 버렸다!
@@ -177,12 +188,15 @@ SIF CFLAG:1 == 2
 ;FEAT 효과로 인한 상태 이상 무효
 SIF TALENT:축복 > 0 && ARG < 100 && RAND:2 == 0
 	RETURN 0
+;절대 방어일 경우 상태 이상 무효
+SIF TCVARn:200 > 0
+	RETURN 0
 SIF RAND:100 > ARG
 	RETURN 0
-PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 온몸이
+PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 온몸이 
 FONTBOLD
 SETCOLOR 250,250,0
-PRINT [마비]
+PRINT [마비] 
 RESETCOLOR
 FONTREGULAR
 PRINTL 되고 말았다!
@@ -204,10 +218,10 @@ SIF TALENT:축복 > 0 && ARG < 100 && RAND:2 == 0
 	RETURN 0
 SIF RAND:100 > ARG
 	RETURN 0
-PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%
+PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 
 FONTBOLD
 SETCOLOR 250,180,50
-PRINT [기절]
+PRINT [기절] 
 RESETCOLOR
 FONTREGULAR
 PRINTL 하고 말았다!
@@ -241,7 +255,7 @@ SIF RAND:100 > ARG
 PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 강제로 
 FONTBOLD
 SETCOLOR 150,0,250
-PRINT [배란]
+PRINT [배란] 
 RESETCOLOR
 FONTREGULAR
 PRINTL 상태가 되어 버렸다!
@@ -264,7 +278,7 @@ SIF RAND:100 > ARG
 PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 미약의 효과로 인해 
 FONTBOLD
 SETCOLOR 250,0,150
-PRINT [발정]
+PRINT [발정] 
 RESETCOLOR
 FONTREGULAR
 PRINTL 하고 말았다!
@@ -282,12 +296,15 @@ SIF CFLAG:1 == 2
 ;FEAT 효과로 인한 상태 이상 무효
 SIF TALENT:축복 > 0 && ARG < 100 && RAND:4 != 0
 	RETURN 0
+;절대 방어일 경우 상태 이상 무효
+SIF TCVARn:200 > 0
+	RETURN 0
 SIF RAND:100 > ARG
 	RETURN 0
 PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 점액으로 인해 온몸이 
 FONTBOLD
 SETCOLOR 0,250,150
-PRINT [끈적끈적]
+PRINT [끈적끈적] 
 RESETCOLOR
 FONTREGULAR
 PRINTL 하게 되어 버렸다!
@@ -307,7 +324,7 @@ SIF RAND:100 > ARG
 PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 
 FONTBOLD
 SETCOLOR 200,50,50
-PRINT [강구속]
+PRINT [강구속] 
 RESETCOLOR
 FONTREGULAR
 PRINTL 상태가 되어 버렸다!
@@ -357,7 +374,7 @@ TCVARn:2 = 자세：통상
 	SIF ARGS == "마비"	;비전격 유래
 		TCVARn:14 = 6
 	;원문은 気絶ダメージ
-	SIF ARGS == "기절 피해량"
+	SIF ARGS == "피격 기절"
 		TCVARn:14 = 7
 	;기초 확률
 	TCVARn:15 = ARG:1
