--- a/ERB/캐릭터관련/CHARA_STATUS.ERB
+++ b/ERB/캐릭터관련/CHARA_STATUS.ERB
@@ -1346,7 +1346,7 @@ ELSEIF ARG:1 == 1
 	RESETCOLOR
 
 
-
+	;SP 변신했을 경우
 	IF CFLAG:1 == 2
 		LOCAL:0 = 24 * (500 + (500 - TCVARn:5) * 4) / 500
 		LOCAL:1 = 15 * (500 + (500 - TCVARn:5) * 4) / 500
@@ -1354,12 +1354,12 @@ ELSEIF ARG:1 == 1
 		PRINTFORM S.P.　
 
 		CALL STATUS_PRINT_EX(1)
-			PRINTFORM 　%UNICODE(0x208D)%
+		PRINTFORM 　%UNICODE(0x208D)%
 		CALL COLOR_BAR(TCVARn:5, 500, 20, 128, 128, 180, -100, LOCAL:0, LOCAL:0, LOCAL:1, 1, UNICODE(0x25AE), UNICODE(0x25AE))
 		PRINTFORM %UNICODE(0x208E)%　
 	ELSE
 		;EX 게이지가 완전히 파괴된 경우
-		IF GETBATTLESITUATION("EX 불가")==1
+		IF GETBATTLESITUATION("EX 불가") == 1
 			PRINTFORM E.X.　
 			CALL STATUS_PRINT_EX(2)
 			PRINTFORM 　%UNICODE(0x208D)%
@@ -1387,6 +1387,7 @@ ELSEIF ARG:1 == 1
 			PRINTFORM %UNICODE(0x25AE)*4%
 			RESETCOLOR
 			PRINTFORM %UNICODE(0x208E)%　
+		;통상시 EX게이지
 		ELSE
 			IF TCVARn:4 < 500
 				LOCAL:2 = TCVARn:4 % 100
@@ -1442,6 +1443,7 @@ ELSEIF ARG:1 == 1
 
 
 	CALL STATUS_PRINT_AIRGAGE
+	CALL STATUS_PRINT_CHARGE
 
 ;스테이터스 화면
 ELSEIF ARG:1 == 2
@@ -3032,7 +3034,7 @@ SELECTCASE ARG
 
 	;마조기질
 	CASE 609
-		RETURNF "마조끼가 성장하기 쉬워진다."
+		RETURNF "피격 시에 피해량과 마조끼에 따라 EX 게이지가 추가로 상승하지만, 욕정이 증가한다. 또한 마조끼가 오르기 쉽다."
 
 	;쾌감에솔직
 	CASE 610
@@ -3561,193 +3563,193 @@ ELSE
 ENDIF
 
 @STATUS_PRINT_EX(ARG)
-	FONTBOLD
-	;PRINT GUAGE STOCK　
-	FONTITALIC
-	IF ARG == 1
-		LOCAL=TCVARn:5
-		IF LOCAL / 100 >= 1
-			IF TCVARn:6 <= -500 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 210,210,80
-			ENDIF
-			PRINT ■
+FONTBOLD
+;PRINT GUAGE STOCK　
+FONTITALIC
+IF ARG == 1
+	LOCAL=TCVARn:5
+	IF LOCAL / 100 >= 1
+		IF TCVARn:6 <= -500 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 210,210,80
 		ENDIF
-		IF LOCAL / 100 >= 2
-			IF TCVARn:6 <= -400 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 220,220,90
-			ENDIF
-			PRINT ■
+		PRINT ■
+	ENDIF
+	IF LOCAL / 100 >= 2
+		IF TCVARn:6 <= -400 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 220,220,90
 		ENDIF
-		IF LOCAL / 100 >= 3
-			IF TCVARn:6 <= -300 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 230,230,100
-			ENDIF
-			PRINT ■
-		ENDIF	
-		IF LOCAL / 100 >= 4
-			IF TCVARn:6 <= -200 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 240,240,110
-			ENDIF
-			PRINT ■
+		PRINT ■
+	ENDIF
+	IF LOCAL / 100 >= 3
+		IF TCVARn:6 <= -300 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 230,230,100
 		ENDIF
-		IF LOCAL / 100 >= 5
-			IF TCVARn:6 <= -100 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 250,250,120
-			ENDIF
-			PRINT ■
+		PRINT ■
+	ENDIF	
+	IF LOCAL / 100 >= 4
+		IF TCVARn:6 <= -200 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 240,240,110
 		ENDIF
+		PRINT ■
+	ENDIF
+	IF LOCAL / 100 >= 5
+		IF TCVARn:6 <= -100 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 250,250,120
+		ENDIF
+		PRINT ■
+	ENDIF
+	SETCOLOR 128,128,128
+	REPEAT MAX(0,5-LOCAL / 100)
+		PRINT □
+	REND
+	PRINT  
+ELSEIF ARG==2
+	SETCOLOR 64,64,64
+	REPEAT 5
+		PRINT □
+	REND
+	PRINT  
+
+ELSE
+	LOCAL=TCVARn:4
+	IF LOCAL / 100 == 0
 		SETCOLOR 128,128,128
-		REPEAT MAX(0,5-LOCAL / 100)
-			PRINT □
-		REND
+		PRINT □
+		PRINT □
+		PRINT □
+		PRINT □
+		PRINT □
 		PRINT  
-	ELSEIF ARG==2
-		SETCOLOR 64,64,64
-		REPEAT 5
-			PRINT □
-		REND
-		PRINT  
-
-	ELSE
-		LOCAL=TCVARn:4
-		IF LOCAL / 100 == 0
-			SETCOLOR 128,128,128
-			PRINT □
-			PRINT □
-			PRINT □
-			PRINT □
-			PRINT □
-			PRINT  
-		ELSEIF LOCAL / 100 == 1
-			IF TCVARn:6 <= -100 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 160,160,160
-			ENDIF
-			PRINT ■
-			SETCOLOR 128,128,128
-			PRINT □
-			PRINT □
-			PRINT □
-			PRINT □
-			PRINT  
-		ELSEIF LOCAL / 100 == 2
-			IF TCVARn:6 <= -200 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 160,160,160
-			ENDIF
-			PRINT ■
-			IF TCVARn:6 <= -100 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 170,170,170
-			ENDIF
-			PRINT ■
-			SETCOLOR 128,128,128
-			PRINT □
-			PRINT □
-			PRINT □
-			PRINT  
-		ELSEIF LOCAL / 100 == 3
-			IF TCVARn:6 <= -300 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 160,160,160
-			ENDIF
-			PRINT ■
-			IF TCVARn:6 <= -200 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 170,170,170
-			ENDIF
-			PRINT ■
-			IF TCVARn:6 <= -100 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 180,180,180
-			ENDIF
-			PRINT ■
-			SETCOLOR 128,128,128
-			PRINT □
-			PRINT □
-			PRINT  
-		ELSEIF LOCAL / 100 == 4
-			IF TCVARn:6 <= -400 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 160,160,160
-			ENDIF
-			PRINT ■
-			IF TCVARn:6 <= -300 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 170,170,170
-			ENDIF
-			PRINT ■
-			IF TCVARn:6 <= -200 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 180,180,180
-			ENDIF
-			PRINT ■
-			IF TCVARn:6 <= -100 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 200,200,200
-			ENDIF
-			PRINT ■
-			SETCOLOR 128,128,128
-			PRINT □
-			PRINT  
-		ELSEIF LOCAL / 100 == 5
-			IF TCVARn:6 <= -500 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 160,160,160
-			ENDIF
-			PRINT ■
-			IF TCVARn:6 <= -400 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 170,170,170
-			ENDIF
-			PRINT ■
-			IF TCVARn:6 <= -300 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 180,180,180
-			ENDIF
-			PRINT ■
-			IF TCVARn:6 <= -200 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 200,200,200
-			ENDIF
-			PRINT ■
-			IF TCVARn:6 <= -100 && CFLAG:1 != 2
-				SETCOLOR 255,255,0
-			ELSE
-				SETCOLOR 220,220,220
-			ENDIF
-			PRINT ■
-			PRINT  
+	ELSEIF LOCAL / 100 == 1
+		IF TCVARn:6 <= -100 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 160,160,160
 		ENDIF
-
+		PRINT ■
+		SETCOLOR 128,128,128
+		PRINT □
+		PRINT □
+		PRINT □
+		PRINT □
+		PRINT  
+	ELSEIF LOCAL / 100 == 2
+		IF TCVARn:6 <= -200 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 160,160,160
+		ENDIF
+		PRINT ■
+		IF TCVARn:6 <= -100 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 170,170,170
+		ENDIF
+		PRINT ■
+		SETCOLOR 128,128,128
+		PRINT □
+		PRINT □
+		PRINT □
+		PRINT  
+	ELSEIF LOCAL / 100 == 3
+		IF TCVARn:6 <= -300 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 160,160,160
+		ENDIF
+		PRINT ■
+		IF TCVARn:6 <= -200 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 170,170,170
+		ENDIF
+		PRINT ■
+		IF TCVARn:6 <= -100 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 180,180,180
+		ENDIF
+		PRINT ■
+		SETCOLOR 128,128,128
+		PRINT □
+		PRINT □
+		PRINT  
+	ELSEIF LOCAL / 100 == 4
+		IF TCVARn:6 <= -400 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 160,160,160
+		ENDIF
+		PRINT ■
+		IF TCVARn:6 <= -300 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 170,170,170
+		ENDIF
+		PRINT ■
+		IF TCVARn:6 <= -200 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 180,180,180
+		ENDIF
+		PRINT ■
+		IF TCVARn:6 <= -100 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 200,200,200
+		ENDIF
+		PRINT ■
+		SETCOLOR 128,128,128
+		PRINT □
+		PRINT  
+	ELSEIF LOCAL / 100 == 5
+		IF TCVARn:6 <= -500 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 160,160,160
+		ENDIF
+		PRINT ■
+		IF TCVARn:6 <= -400 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 170,170,170
+		ENDIF
+		PRINT ■
+		IF TCVARn:6 <= -300 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 180,180,180
+		ENDIF
+		PRINT ■
+		IF TCVARn:6 <= -200 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 200,200,200
+		ENDIF
+		PRINT ■
+		IF TCVARn:6 <= -100 && CFLAG:1 != 2
+			SETCOLOR 255,255,0
+		ELSE
+			SETCOLOR 220,220,220
+		ENDIF
+		PRINT ■
+		PRINT  
 	ENDIF
 
-	RESETCOLOR
-	FONTREGULAR
+ENDIF
+
+RESETCOLOR
+FONTREGULAR
 
 ;전투용, 공중 게이지 표시
 @STATUS_PRINT_AIRGAGE
@@ -3877,7 +3879,39 @@ ELSE
 ENDIF
 FONTREGULAR
 
+;전투용, 축적 피해량 표시
+;여기에서 TCVARn:206(축적 피해량 한도치)의 값을 정한다
+@STATUS_PRINT_CHARGE
+FONTBOLD
+PRINT CHARGE.
+FONTITALIC
 
+;소모도(체력+기력+{피로도*150})에 따라 한도치(%)가 변동된다
+;소모도 100%~75%: 최대 체력의 120% || 소모도 74%~40%: 최대 체력의 100% || 소모도 39%~: 최대 체력의 80%
+SELECTCASE PERCENT_CAL_F(BASE:체력 + BASE:기력 + (CFLAG:99 * 150), MAXBASE:체력 + MAXBASE:기력)
+	CASE 0 TO 39
+		LOCAL = 80
+	CASE 40 TO 74
+		LOCAL = 100
+	CASEELSE
+		LOCAL = 120
+ENDSELECT
+
+TCVARn:206 = MAXBASE:체력 * LOCAL / 100
+
+LOCAL:0 = PERCENT_CAL_F(TCVARn:205, TCVARn:206)
+IF LOCAL >= TCVARn:206 + 20
+	SETCOLOR 255, 255, 0
+ELSEIF LOCAL >= TCVARn:206
+	SETCOLOR 255, 123, 0
+ENDIF
+
+PRINTFORM %UNICODE(0x208D)%
+CALL COLOR_BAR(TCVARn:205, TCVARn:206, 20, 60, 75, 215, -160, 10, 18, 6, 2, UNICODE(0x25AE), UNICODE(0x25AE))
+PRINTFORM %UNICODE(0x208E)%
+FONTREGULAR
+RESETCOLOR
+PRINTFORM （{TCVARn:205, 5}/{TCVARn:206, 5}）
 
 
 @STATUS_PRINT_FEAT
