--- a/ERB/캐릭터관련/CHARA_SYUZOKU.ERB
+++ b/ERB/캐릭터관련/CHARA_SYUZOKU.ERB
@@ -324,8 +324,8 @@ ELSEIF TALENTNAME:ARG == "숨겨진힘"
 	PRINTL   당신은 평상시에 남들보다 뒤처지는 경향이 있다.
 	PRINTL   하지만, 당신은 그저 진정한 실력을 발휘하지 못하고 있었을 뿐이다.
 	PRINTL 
-	PRINTL     장점：남은 체력, 기력의 합계가 최대치의 25% 이하일 때, 직격률과 치명타율이 12%, 치명타 배율이 50% 상승한다.
-	PRINTL 　　　　　또한, 10% 이하로 소모될 시 치명타 배율이 추가로 50% 상승한다.
+	PRINTL     장점：남은 체력, 기력의 합계가 최대치의 40% 이하일 때, 직격률과 치명타율이 12%, 치명타 배율이 50% 상승한다.
+	PRINTL 　　　　　또한, 15% 이하로 소모될 시 치명타 배율이 추가로 50% 상승한다.
 	PRINTL     단점：모든 스탯 보너스가 -5 된다.
 ELSEIF TALENTNAME:ARG == "행운아"
 	PRINTL   당신은 무척이나 운이 좋으며, 스스로도 그 행운을 활용하고는 한다.
@@ -387,7 +387,8 @@ ELSEIF TALENTNAME:ARG == "불굴"
 ELSEIF TALENTNAME:ARG == "스태미나"
 	PRINTL   당신은 뛰어난 지구력을 가지고 있다. 피로가 다소 쌓이더라도 기운이 빠지지 않는다.
 	PRINTL 
-	PRINTL     장점：피로가 쌓여도 회복 행동의 회복량이 잘 저하되지 않는다.
+	PRINTL     장점：피로가 쌓여도 회복 행동의 회복량이 잘 저하하지 않는다.
+	PRINTL 　　　　　또한, 체력이나 기력이 다 하여도 회복할 수 있게 된다.
 	PRINTL     단점：EX 게이지가 증가하기 어려워진다.
 ELSEIF TALENTNAME:ARG == "불로장수"
 	PRINTL   당신은 제수명이 있음에도 불구하고, 전혀 늙지를 않는 특이체질을 지니고 있다.
@@ -426,9 +427,11 @@ ELSEIF TALENTNAME:ARG == "배덕의낙인"
 	PRINTL     단점：전투나 유폐 시에 획득하는 구슬의 양이 증가한다.
 ELSEIF TALENTNAME:ARG == "에어마스터"
 	PRINTL   당신은 재빠른 몸놀림을 통한 공중 기동력이 뛰어나다.
-	PRINTL   공중에서 당신을 붙잡을 수 있는 이는 극히 드물 것이다.
+	PRINTL   공중에서의 당신을 잡으려하는 것은 어리석은 행위일 것이다.
 	PRINTL 
-	PRINTL     장점：공중 대시 중의 회피율이 25% 상승한다.
+	PRINTL     장점：공중 대시 중의 회피율이 25% 상승하며, 치명타율이 10% 상승한다.
+	PRINTL 　　　　　또한, 공중 대시로 상대의 공격을 회피할 시, 1회 한정으로 공중 대시 게이지를 1 회복한다.
+	PRINTL 　　　　　※착지 시 횟수 제한 초기화
 	PRINTL     단점：공중 대시 사용 시의 피로 축적이 1 증가한다.
 ENDIF
 
