--- a/●개발자용 자료/各種テンプレ/SLANGの切り替え条件.ERB
+++ b/●개발자용 자료/各種テンプレ/SLANGの切り替え条件.ERB
@@ -524,29 +524,29 @@ ENDIF
 ;**********************************************************
 ;스테이터스の場合
 ;**********************************************************
-IF (TCVAR:12 & 기절)
+IF (TCVARn:12 & 기절)
 	SLANGWORD_XXXX+=""
 ENDIF
-IF (TCVAR:12 & 배란)
+IF (TCVARn:12 & 배란)
 	SLANGWORD_XXXX+=""
 ENDIF
-IF (TCVAR:12 & 발정)
+IF (TCVARn:12 & 발정)
 	SLANGWORD_XXXX+=""
 ENDIF
-IF (TCVAR:12 & 마비)
+IF (TCVARn:12 & 마비)
 	SLANGWORD_XXXX+=""
 ENDIF
 
-IF (TCVAR:12 & 쓰러짐)
+IF (TCVARn:12 & 쓰러짐)
 	SLANGWORD_XXXX+=""
 ENDIF
-IF (TCVAR:12 & 황홀)
+IF (TCVARn:12 & 황홀)
 	SLANGWORD_XXXX+=""
 ENDIF
-IF (TCVAR:12 & 강구속)
+IF (TCVARn:12 & 강구속)
 	SLANGWORD_XXXX+=""
 ENDIF
-IF (TCVAR:12 & 절정금지)
+IF (TCVARn:12 & 절정금지)
 	SLANGWORD_XXXX+=""
 ENDIF
 
