--- a/ERB/게임_내_이벤트발생/엔딩/SCORE.ERB
+++ b/ERB/게임_내_이벤트발생/엔딩/SCORE.ERB
@@ -1,10 +1,10 @@
 ﻿;**********************************************************
-;ゲームクリア後のスコア表示
+;게임 클리어 후 스코어 표시
 @SCORE
 #DIM CCOUNT
 VARSET LOCAL
-;キャラの生存状況による評価
-;ソロモードは유폐경험で分岐
+;캐릭터의 생존 상황에 따른 평가
+;SOLO모드는 유폐경험으로 분기
 IF GAME_OPTION_CHECK_F(OPTION_solo) && CHARANUM < 3
 	LOCAL = EXP:1:유폐경험
 	IF LOCAL >= 5
@@ -32,13 +32,13 @@ ELSE
 		SIF CCOUNT == MASTER
 			CONTINUE
 
-		;유폐状態で放置
+		;유폐 상태로 방치
 		SIF CFLAG:CCOUNT:0 == 1
 			LOCAL -= 60 / (CHARANUM - 1)
-		;세뇌、흑화状態で放置
+		;세뇌, 흑화 상태로 방치
 		SIF CFLAG:CCOUNT:0 == 2 || CFLAG:CCOUNT:0 == 3
 			LOCAL -= 30 / (CHARANUM - 1)
-		;死亡状態
+		;사망 상태
 		SIF CFLAG:CCOUNT:0 == 9
 			LOCAL -= 90 / (CHARANUM - 1)
 	NEXT
@@ -63,7 +63,7 @@ ELSE
 	ENDIF
 ENDIF
 
-;エンドレスモードの場合は撃破数評価
+;ENDLESS 모드일 경우 격파 수 평가
 IF GAME_OPTION_CHECK_F(OPTION_endless)
 	CALL TENTACLE_SURVIVE, "NUM"
 	LOCAL = FLAG:3 - RESULT
@@ -86,7 +86,7 @@ IF GAME_OPTION_CHECK_F(OPTION_endless)
 		LOCAL:2 = 6
 		LOCALS:2 = S
 	ENDIF
-;それ以外は残り日数による評価
+;그 외에는 남은 제한 일수에 따른 평가
 ELSE
 	LOCAL = (FLAG:1 - DAY) * 100 / FLAG:2
 	IF LOCAL < 30
@@ -110,7 +110,7 @@ ELSE
 	ENDIF
 ENDIF
 
-;모든 캐릭터의 피간경험と素質による評価
+;모든 캐릭터의 피간경험과 소질에 따른 평가
 LOCAL = 0
 FOR CCOUNT, 0, CHARANUM
 	SIF CCOUNT == MASTER
@@ -145,7 +145,7 @@ ELSE
 	LOCALS:3 = S
 ENDIF
 
-;生存キャラの性関連の能力値による評価
+;생존 캐릭터의 성관련 능력치에 따른 평가
 LOCAL = 0
 FOR CCOUNT, O, CHARANUM
 	SIF CCOUNT == MASTER
@@ -361,7 +361,7 @@ ELSE
 	LOCALS:4 = S
 ENDIF
 
-;인기도による評価
+;인기도에 따른 평가
 LOCAL = FLAG:853
 IF LOCAL <= -10
 	LOCAL:5 = 1
@@ -383,9 +383,9 @@ ELSE
 	LOCALS:5 = S
 ENDIF
 
-;クリア時の総資産による評価
+;클리어 시의 총자산에 따른 평가
 LOCAL = MONEY * 2
-;施設
+;시설
 LOCAL += 5000 * (FLAG:50 - 1) + 5000
 LOCAL += 1000 * (FLAG:51 - 1) + 1000
 LOCAL += 10000 * FLAG:52 + 10000
@@ -408,10 +408,10 @@ SIF (FLAG:53 & 미용온천)
 SIF (FLAG:53 & 뷰티살롱)
 	LOCAL += 1500000
 
-;ソロモード時は３倍の評価
+;SOLO모드일 때는 3배의 평가
 SIF GAME_OPTION_CHECK_F(OPTION_solo)
 	LOCAL *= 3
-;所持アイテム
+;소지 아이템
 FOR CCOUNT,0,999
 	SIF ITEM:CCOUNT
 		LOCAL += ITEMPRICE:CCOUNT
@@ -436,8 +436,8 @@ ELSE
 	LOCALS:6 = S
 ENDIF
 
-;総合評価
-;피간경험と性能力値のうち、良いスコアの方を総合評価に使う
+;종합 평가
+;피간경험과 성능력치 중, 더 좋은 스코어를 받은 쪽을 종합 평가에 쓴다
 IF LOCAL:3 >= LOCAL:4
 	LOCAL:98 = LOCAL:3
 ELSE
@@ -460,236 +460,257 @@ ELSE
 	LOCALS:99 = S
 ENDIF
 
-;評価の表示
-PRINTL *** クリアスコア ***
+;평가 표시
+PRINTL *** 클리어 스코어 ***
 CALL SHORTLINE
-PRINTFORML キャラの生存・・・%LOCALS:1%
+PRINTFORML 캐릭터 생존 ・・・%LOCALS:1%
 IF GAME_OPTION_CHECK_F(OPTION_endless)
-	PRINTFORML 보스撃破数・・・・%LOCALS:2%
+	PRINTFORML 보스 격파 수・・・%LOCALS:2%
 ELSE
-	PRINTFORML クリア日数・・・・%LOCALS:2%
+	PRINTFORML 클리어 일수 ・・・%LOCALS:2%
 ENDIF
 IF LOCAL:3 >= LOCAL:4
-	PRINTFORML キャラの純潔度・・%LOCALS:3%    キャラの性成長・・%LOCALS:4%
+	PRINTFORML 캐릭터 순결도 ・・%LOCALS:3%    캐릭터 성(性)성장・・%LOCALS:4%
 ELSE
-	PRINTFORML キャラの性成長・・%LOCALS:4%    キャラの純潔度・・%LOCALS:3%
+	PRINTFORML 캐릭터 성(性)성장・・%LOCALS:4%    캐릭터 순결도 ・・%LOCALS:3%
 ENDIF
 PRINTFORML 인기도・・・・・・%LOCALS:5%
-PRINTFORML 総資産・・・・・・%LOCALS:6%
+PRINTFORML 총자산・・・・・・%LOCALS:6%
 PRINTL 
-PRINTFORML 総合評価・・・・・%LOCALS:99%
+PRINTFORML 종합 평가 ・・・・%LOCALS:99%
 CALL SHORTLINE
 PRINTW 
-;評価メッセージ
-PRINTL クリアおめでとうございます。
-PRINTL このコーナーではスコアに対する評価をしていきたいと思います。
+;평가 메시지
+PRINTL 「경」마법소녀 퍼펙트 게임 코너「축」
+PRINTL 게임 클리어 축하드립니다！(짝짝짝)
+PRINTL 지금부터 관심법을 사용하여 당신의 스코어에 대한 평가를 내려보도록 하겠습니다.
 PRINTW 
-;生存評価
-PRINTFORML 生存評価：%LOCALS:1%
+;생존 평가
+PRINTFORML 생존 평가：%LOCALS:1%
 IF GAME_OPTION_CHECK_F(OPTION_solo)
 	IF LOCAL:1 <= 3
-		PRINTL ソロモードでは유폐されてもゲームオーバーにならない代わりに、
-		PRINTL 유폐された回数で生存評価が低下してしまいます。
-		PRINTL また、세뇌/흑화するとゲームオーバーになるという
-		PRINTL ソロモード独自の仕様があるので要注意です。
+		PRINTL SOLO모드에서는 유폐되더라도 게임 오버가 되지 않는 대신에
+		PRINTL 유폐된 횟수로 생존 평가가 저하되어 버립니다.
+		PRINTL 또한, 세뇌/흑화될 시에는 게임 오버가 된다는
+		PRINTL SOLO모드 독자적인 사양이 있으므로 주의해야 합니다.
 	ELSEIF LOCAL:1 <= 5
-		PRINTL ソロモードでは一回や二回くらい유폐されても余裕で脱出できます。
-		PRINTL しかし、Ｓ評価を目指すならば一度も유폐されずにクリアする必要があります。
-		PRINTL 純潔度評価Ｓを目指せば自然と生存評価も良くなるので、同時に目指してみましょう。
+		PRINTL SOLO모드라면 한두 번쯤은 유폐되더라도 여유롭게 탈출할 수 있습니다.
+		PRINTL 그러나, S등급을 지향한다면 한 번이라도 유폐되지 않고 클리어해야만 합니다.
+		PRINTL 순결도 평가 S를 목표로 할 시 자연스레 생존 평가도 좋아질 것이므로, 두 가지 모두 S등급을 목표로 해봅시다.
 	ELSE
-		PRINTL 一度も유폐されずにクリアできたようですね。
-		PRINTL たった一人でずいぶん大変だったろうと思います。
+		PRINTL 단 한 번도 유폐되지 않고 클리어하신 것 같네요！
+		PRINTL 오로지 한 명만으로 참 많이 힘들었으리라는 생각이 드네요.
 		IF LOCAL:4 >= 3
-			PRINTL おまけに性成長評価が高いということは、茨の道を歩んできた証拠。
-			PRINTL そんなアナタに敬礼です。
+			PRINTL 덤으로 성(性)성장 평가가 높다는 것은, 가시밭길을 걸어왔다는 증거이기도 하지요.
+			PRINTL 고난을 헤쳐온 당신에게 경의를 표합니다.
 		ELSE
-			PRINTL 性成長評価を高めようとすると自然と유폐されるプレイになると思うので、
-			PRINTL 生存評価と両立するのはもはや苦行の領域かもしれません。
+			PRINTL 성(性)성장 평가도 높이고자 하신다면 자연스럽게 유폐당하는 플레이가 되기 쉬울 것이라는 생각이 듭니다.
+			PRINTL 만약 두 가지 모두 S등급을 챙기고자 한다면, 거기서부터는 고행의 영역이 될지도 모르겠습니다.
 		ENDIF
+		PRINTL 아무튼간에, S등급에 걸맞는 실력자이십니다！
 	ENDIF
 ELSE
 	IF LOCAL:1 <= 2
-		PRINTL 苦しい戦いだったかもしれませんが、よく頑張りました。
-		PRINTL 체력や기력が減ると命中率や회피율が大きく落ちてしまうので、
-		PRINTL 早めに撤退すれば敗北は避けられます。
+		PRINTL 얼마나 힘든 싸움이었을지 가늠조차 안 가지만, 끝까지 잘 해내셨습니다.
+		PRINTL 체력이나 기력이 줄어들면 명중률과 회피율이 크게 떨어져 전투가 매우 불리해집니다.
+		PRINTL 무리하지 말고, 보다 일찍 철수한다면 캐릭터의 패배만큼은 피할 수 있을 겁니다.
 	ELSEIF LOCAL:1 == 3
-		PRINTL あらら・・・ずいぶん犠牲者が出てしまったようですね。
-		PRINTL 仲間を유폐した보스は遭遇率がグーンと伸びるので、諦めずに救出に向かいましょう。
+		PRINTL 어라라・・・ 예상 외로 희생자가 나온 것 같네요.
+		PRINTL 동료를 유폐시킨 보스는 조우율이 쭉쭉 늘어나기 때문에, 포기하지 말고 서둘러 구출하러 갑시다.
 	ELSEIF LOCAL:1 == 4
-		PRINTL 一人が捕まったくらいなら、방위력を維持しながら鍛錬するのも容易いはず。
-		PRINTL 전투 지원を利用すれば撤退しやすくなるので、試しに使ってみては如何でしょう？
+		PRINTL 여태 딱 한 사람만 잡혔을 정도라면, 충분히 방위력을 유지하면서 단련하는 것도 어렵지 않았을 테지요.
+		PRINTL 전투 지원을 이용하면 철수하기가 쉬워지므로, 다음 회차 때 시험 삼아 이용해 보는 건 어떨까요？
 	ELSEIF LOCAL:1 == 5
-		PRINTL 세뇌や흑화してしまった仲間を見捨てていませんか？
-		PRINTL 仲間が全員揃っていればクリア評価はＳになるので、もうひと踏ん張りです。
+		PRINTL 전원 생존…… 어라, 빈 사람이 있는 것 같네요.
+		PRINTL 세뇌됐거나 흑화해 버린 동료를 내버려두지는 않았나요？
+		PRINTL 동료가 모두 모여 있다면 생존 평가는 S등급이 되므로, 한 번만이라도 더 버텨보아요.
 	ELSE
-		PRINTL 全員を無事に生存させたみたいですね。
-		PRINTL 実は仲間が捕まってしまうと제한 일수が増加するので、
-		PRINTL あえて捕まらせて日数を稼ぐという戦略もあります。
-		PRINTL 知ってました？
+		PRINTL 모두를 무사히 생존시킨 것 같네요.
+		PRINTL 혹시 알고 계셨나요？ 동료가 붙잡혀 버린다면 제한 일수가 증가한다는 사실！
+		PRINTL 그래서 일부러 붙잡혀 제한 일수를 번다는 전략도 있답니다.
+		PRINTL 아무튼, S등급 축하드려요！
 	ENDIF
 ENDIF
 PRINTW 
-;撃破数評価/日数評価
+;격파수 평가/일수 평가
 IF GAME_OPTION_CHECK_F(OPTION_endless)
-	PRINTFORML 撃破評価：%LOCALS:2%
+	PRINTFORML 격파 평가：%LOCALS:2%
 	IF LOCAL:2 <= 2
-		PRINTL あまり撃破数が伸びなかったようですね。
-		PRINTL 鍛錬するか보스に挑むかのバランスが攻略の鍵です。
-		PRINTL ENDLESSモードでは보스の레벨アップが少しだけ遅いので、
-		PRINTL 思い切って突撃してみると意外と倒せたりします。
+		PRINTL 격파수가 그닥 늘어나지는 않았나보네요.
+		PRINTL 단련하느냐, 아님 보스에게 도전하느냐의 균형이 공략의 열쇠입니다.
+		PRINTL ENDLESS 모드에서는 보스 레벨업이 조금 느려지므로,
+		PRINTL 과감히 돌격하다 보면 의외로 쉽게 쓰러뜨리기도 한답니다？
 	ELSEIF LOCAL:2 == 3
-		PRINTL 普通にプレイした場合の平均的な撃破数ですね。
-		PRINTL キャラクターにも苦手な相手と得意な相手が居ると思うので、
-		PRINTL どの보스が出現するか等の運の要素も絡んできます。
+		PRINTL 무난한 플레이에서 나오는 평균적인 격파수네요.
+		PRINTL 캐릭터에도 서투른 상대와 특기인 상대가 있다고 생각하기 때문에,
+		PRINTL 어떤 보스가 출현하는지 등의 운적인 요소도 얽혀 있습니다.
+		PRINTL 달리 말하자면 운이 없어서 억까당했다고도 할 수 있겠네요.
 	ELSEIF LOCAL:2 == 4
-		PRINTL ENDLESSモードでは보스撃破数20を突破すると期限があまり伸びなくなるので、
-		PRINTL この先はひたすら제한 일수との戦いになります。
-		PRINTL ここまで来たらキャラ引き継ぎや레벨引き継ぎで最高の戦力を用意して挑みましょう。
+		PRINTL ENDLESS 모드에서는 보스 격파수가 20을 돌파하게 된다면 제한 일수도 점점 조금씩만 늘어나기 때문에,
+		PRINTL 그 때부터는 오로지 제한 일수와의 싸움이 됩니다.
+		PRINTL 이 시점부터는 다회차로 레벨 또는 전투 기술 인계 등의 특전을 통해 최강의 전력을 갖춰 고득점을 노리는 고인물들의 영역이겠지요.
+		PRINTL 여기까지 해온 당신도 훌륭히 해낸 거랍니다！
 	ELSEIF LOCAL:2 == 5
-		PRINTL 素晴らしい撃破数ですが、おしい。
-		PRINTL どんな手段を使ってでも期日を延ばして１体でも多くの보스を撃破しましょう。
-		PRINTL 最高評価まではあと一歩です！
+		PRINTL 대단한 격파수네요! 어디 가서 eraGVT 고수라고 자랑하고 싶군요！
+		PRINTL 다만, 이 이상의 성적을 내려면 최대한 효율적으로 싸우고 마이너스를 줄이는 고행을 겪어야겠지요.
+		PRINTL 그 어떤 수단을 써서라도 제한 일수를 늦추고 보스를 한 마리라도 더 격파합시다.
+		PRINTL S등급까지 얼마 안 남았습니다, 화이팅！
 	ELSE
-		PRINTL お見事です。かなり効率的なプレイをしたみたいですね。
-		PRINTL この数の보스を撃破するのは並大抵のことではありません。
-		PRINTL 堂々のＳ評価おめでとうございます。
+		PRINTL 와아！ 축하드립니다！！ 최고 등급에 도달하셨습니다!
+		PRINTL 이 정도 수의 보스를 격파하는 건 어지간한 플레이로는 무척 어려울 테지요.
+		PRINTL S등급에 걸맞는 실력자이십니다！
 	ENDIF
 ELSE
-	PRINTFORML 日数評価：%LOCALS:2%
+	PRINTFORML 일수 평가：%LOCALS:2%
 	IF LOCAL:2 == 1
-		PRINTL かなりギリギリだったようですね。
-		PRINTL 時間を掛け過ぎると보스の레벨が上がってしまうので、
-		PRINTL 慎重になりすぎるのも考えものです。
+		PRINTL 제법 아슬아슬했던 것 같네요.
+		PRINTL 시간을 너무 오래 끌면 그만큼 보스의 레벨이 올라가 버리기 때문에,
+		PRINTL 너무 신중하게 할 필요는 없어 보이네요.
 	ELSEIF LOCAL:2 == 2
-		PRINTL 慎重なプレイスタイルだったみたいですね。
-		PRINTL 최종 보스のＨＰはかなり多いので、こまめに削っていくことが重要です。
+		PRINTL 신중한 플레이 스타일이었나 보네요.
+		PRINTL 최종 보스의 HP는 상당히 높기 때문에, 부지런히 깎아가는 것이 중요합니다.
+		PRINTL 이전보다 과감하게 플레이해 본다면 결과가 조금은 다를지도 모르겠네요.
 	ELSEIF LOCAL:2 == 3
-		PRINTL 初見プレイならば標準的な日数でクリアできました。
-		PRINTL より効率的な戦い方もできるので、探してみるのも楽しいですよ？
+		PRINTL 초견 플레이라면 보통 이 정도 성적이 나옵니다. 절대로 못한 게 아니랍니다！
+		PRINTL 그러니 다음 회차 때에는 보다 좋은 다회차 특전들과 함께 정면돌파를 해봅시다！
+		PRINTL 나만의 효율적인 빌드를 찾아보는 것도 나름 재밌을 거라고요？
 	ELSEIF LOCAL:2 == 4
-		PRINTL 残り日数を意識してプレイすればこのくらいになるでしょうか。
-		PRINTL 鍛錬施設Lvを早めに上げれば、もっと短縮できるはずです。
+		PRINTL 남은 일수를 의식해서 플레이하면 이 정도가 되겠네요.
+		PRINTL 단련 시설 Lv을 빠르게 올린다면, 시간을 더 단축할 수 있을 겁니다.
+		PRINTL ……라고는 하지만, 사실 몇몇 실수들만 의식한다면 A등급까지는 금방 도달할 수 있을 거에요！
 	ELSEIF LOCAL:2 == 5
-		PRINTL 惜しいところでしたね。
-		PRINTL 보스とうまく遭遇できない場合もあるので、仕方ないかもしれません。
+		PRINTL 상당히 빠르게 클리어하신 편입니다.
+		PRINTL 다만, 보스와 잘 조우하지 못했다거나 이상한 이벤트를 자주 겪는 등
+		PRINTL 억까당한 부분들만 없었다면 더 좋은 기록이 나왔을지도 모르겠네요.
+		PRINTL 조금만 더 힘내 봅시다, 화이팅！
 	ELSE
-		PRINTL お見事です。かなり効率的なプレイをしたみたいですね。
-		PRINTL さらなる記録を目指すのもよし、別の攻略法を試してみるのも良いでしょう。
-		PRINTL ともかく、Ｓ評価おめでとうございます。
+		PRINTL 와아！ 축하드립니다！！ 최고 등급에 도달하셨습니다！
+		PRINTL 이제 새로운 기록을 목표로 하거나, 색다른 공략법을 시도해 보셔도 좋겠네요.
+		PRINTL 예를 들어 착정용사 플레이로 타임어택 찍으셔도 나쁘지 않을지도？
+		PRINTL 아무튼, S등급에 걸맞는 실력자이십니다！
 	ENDIF
 ENDIF
 PRINTW 
-;純潔/性成長評価
+;순결/성(性)성장 평가
 IF LOCAL:3 >= LOCAL:4
-	PRINTFORML 純潔度評価：%LOCALS:3%　　性成長評価：%LOCALS:4%
+	PRINTFORML 순결도 평가：%LOCALS:3%　　성(性)성장 평가：%LOCALS:4%
 	IF LOCAL:3 <= 3
-		PRINTL エッチなことを避けようとしたのに、犯されてしまったようですね。
-		PRINTL このくらいが正しい楽しみ方をしているとも言います。
-		PRINTL あえてリセットしないそのスタイルは好感に値します。
+		PRINTL 야한 짓을 피하려고는 했다만, 결국 범해진 것 같네요.
+		PRINTL ……아니면 그게 취향이라든지？
+		PRINTL 어쨌든 아쉬워서라도 불러오기로 되돌렸을 만한데,
+		PRINTL 굳이 리셋하지 않고 끝까지 진행하는 그 스타일은 정말 호감이 가네요.
 	ELSEIF LOCAL:3 == 4
-		PRINTL エッチは回避して進んだものの、油断があったみたいですね。
-		PRINTL 처녀を守り通したキャラは多少エッチなことをされても
-		PRINTL 純潔度が高くなるので、気を付けてみましょう。
+		PRINTL 야한 짓은 회피하고 나아갔지만, 방심했던 순간은 있었나 보네요.
+		PRINTL 캐릭터가 다소 야한 짓을 당하더라도, 처녀만 지켜낸다면 순결도는 높아집니다.
+		PRINTL 고득점을 노리신다면 다음 번에는 좀 더 조심해봅시다.
 	ELSEIF LOCAL:3 == 5
-		PRINTL かなり頑張りましたが、残念。Ａ評価です。
-		PRINTL 一度でも捕まってしまうとＳ評価にはならないので、
-		PRINTL さらに上を目指すには민첩性特化にする必要があるかもしれません。
+		PRINTL 꽤 열심히 하셨지만, 아쉽게도 A등급입니다.
+		PRINTL 단 한 번이라도 붙잡혀 피간경험이 늘어난다면 S등급 달성이 불가능하기 때문에,
+		PRINTL 한층 더 위를 목표로 하려면 아예 민첩성 특화로 나아갈 필요가 있을지도 모릅니다.
 	ELSE
-		PRINTL お見事としか言いようがありません。
-		PRINTL エロゲーでここまで本気で純潔を守ったアナタは立派です。
-		PRINTL 堂々のＳ評価、おめでとうございます。
+		PRINTL 와아！ 축하드립니다！！ 최고 등급에 도달하셨습니다！
+		PRINTL 훌륭하다고 밖에 말할 수 없습니다！
+		PRINTL 조교 당하라고 만든 게임에서 이렇게까지 진심으로 순결을 지킨 당신은 대단합니다！
+		PRINTW
+		PRINTW 역시 유니콘들은 참으로 무섭네요.
+		CLEARLINE 2
+		PRINTL 아무튼, S등급에 걸맞는 실력자이십니다！
 	ENDIF
 ELSE
-	PRINTFORML 性成長評価：%LOCALS:4%　　純潔度評価：%LOCALS:3%
+	PRINTFORML 성(性)성장 평가：%LOCALS:4%　　순결도 평가：%LOCALS:3%
 	IF LOCAL:4 <= 2
-		PRINTL エッチなことを避けようとしたのに、エッチになってしまったようですね。
-		PRINTL 開き直ってエロエロなキャラを目指す遊び方もありますよ。
+		PRINTL 야한 짓을 피하려고 했지만, 오히려 야한 몸이 되어 버린 것 같군요.
+		PRINTL 그냥 아예 작정하고 에로에로한 캐릭터를 목표로 하는 플레이도 보기 좋답니다？
 	ELSEIF LOCAL:4 == 3 || LOCAL:4 == 4
-		PRINTL そこそこエッチな娘（たち）になってしまったようですね。
-		PRINTL このくらいが正しい楽しみ方をしているとも言います。
-		PRINTL どうせならもっとエロい娘を目指して、自分から捕まっちゃいましょう。
+		PRINTL 그럭저럭 야한 소녀(들)이 되어 버린 것 같네요.
+		PRINTL 꼴리는 대로 가다보면 보통 이 정도 성적이 나오곤 한답니다.
+		PRINTL 이왕이면 좀더 야한 소녀를 목표로, 스스로 잡힌다거나 새로운 특별 활동을 가본다거나 하는 건 어떨까요？
 	ELSEIF LOCAL:4 == 5
-		PRINTL かなりヤられちゃいましたね。
+		PRINTL 제법 저지르신 것 같네요. (흐뭇)
 		IF GAME_OPTION_CHECK_F(OPTION_solo)
-			PRINTL キャラが捕まると期限が延びるので、わざと유폐されて日数を稼ぐ
-			PRINTL マッチポンプ戦法もオススメです。
+			PRINTL 캐릭터가 잡히면 제한 일수가 늘어나므로, 일부러 유폐당하여 일수를 버는
+			PRINTL 자작식(Match Pump) 전법도 추천합니다.
+			PRINTL ……사실 이건 그냥 핑계일 뿐이지만요.
 		ELSE
-			PRINTL キャラが捕まると期限が延びるので、「救出」コマンドを利用した
-			PRINTL マッチポンプ戦法もオススメです。
+			PRINTL 캐릭터가 잡히면 제한 일수가 늘어나므로「구출」커맨드도 이용하여 빠져나와 봅시다.
+			PRINTL 일종의 자작식(Match Pump) 전법이라고도 하죠？
+			PRINTL ……이것도 그냥 그럴싸한 핑계일 뿐이겠지만요.
 		ENDIF
 	ELSE
-		PRINTL すごい事になってますね。
-		PRINTL わざと捕まったりしなければこの評価にはならないと思うので、
-		PRINTL お楽しみ頂けたようで何よりです。
-		PRINTL ともかく、Ｓ評価おめでとうございます。
+		PRINTL ㅗㅜㅑ 대단하시네요.
+		PRINTL 계속해서 일부러 잡히는게 아닌 이상 이 등급이 나오기는 참 힘든데……
+		PRINTL 뭐, 그만큼 즐기셨다면 OK입니다.
+		PRINTL 역시 S(ex)등급에 걸맞는 실력자이십니다！
 	ENDIF
 ENDIF
 PRINTW 
-;인기도評価
-PRINTFORML 인기도評価：%LOCALS:5%
+;인기도 평가
+PRINTFORML 인기도 평가：%LOCALS:5%
 IF LOCAL:5 == 1
-	PRINTL もしかして방위력のことを完全に忘れていませんか？
-	PRINTL ずっと出撃や防衛をせずに放置すると촉수による侵攻が進んでしまいます。
-	PRINTL また、何度も繰り返し戦闘で敗北すると、フォローが利かなくなります。
+	PRINTL 혹시 방위력을 아예 잊고 플레이한 건 아니신가요？
+	PRINTL 계속 출격이나 방위를 하지 않은 채 방치한다면 촉수에 의한 침공이 진행되어 버립니다.
+	PRINTL 또, 몇 번이고 반복해서 전투에서 패배하면, 팔로우(follow)가 잘 안 되게 됩니다.
 ELSEIF LOCAL:5 == 2
 	IF GAME_OPTION_CHECK_F(OPTION_solo)
-		PRINTL ソロモードでは방위력の管理が簡単なので、
-		PRINTL 인기도の維持をすること自体は難しくないはず。
-		PRINTL まずは보스に敗北せずにクリアすることを目指しましょう。
+		PRINTL SOLO모드에서는 방위력 관리가 간단하여,
+		PRINTL 인기도를 유지하는 것 자체는 어렵지 않을 겁니다.
+		PRINTL 우선 보스에게 패배하지 않고 클리어하는 것을 목표로 합시다.
 	ELSE
-		PRINTL ヒーローとしてはまずまずの評価です。
-		PRINTL 보스に고전して、何度か敗北してしまったのではないでしょうか？
-		PRINTL やられるくらいなら撤退した方が良いので、戦闘では引き際が肝心です。
+		PRINTL 히로인으로서는 그저 그런 평가입니다.
+		PRINTL 보스에게 고전하거나, 몇 번 패배한 적은 없었나요？
+		PRINTL 패배할 바에는 철수라도 하는 게 더 나으므로, 전투에서는 물러설 때가 중요합니다.
 	ENDIF
 ELSEIF LOCAL:5 == 3
-	PRINTL 特に意識せずにプレイしていてもこの程度にはなるでしょう。
-	PRINTL 인기도は変動しにくい数値なので、
-	PRINTL なるべく低下させないように心がけると、自然と上昇していくはずです。
+	PRINTL 딱히 의식하지 않고 플레이한다면 이 정도는 되겠지요.
+	PRINTL 인기도는 변동하기 어려운 수치입니다.
+	PRINTL 가급적 저하시키지 않도록 유의한다면, 인기도는 자연스럽게 오를 것입니다.
 ELSEIF LOCAL:5 == 4
-	PRINTL ただ촉수を倒すだけでは真の英雄とは呼べません。
-	PRINTL ここからさらに上を目指すには、市民たちに親しみを覚えてもらう必要がありそうです。
-	PRINTL アルバイトをしてみたり、あとは…アイドルとして活動してみると、
-	PRINTL 応援してくれる人が増えるかもしれません。
+	PRINTL 단지 촉수를 쓰러뜨리는 것만으로는 진정한 영웅이라고 부를 수 없습니다.
+	PRINTL 여기서 더 좋은 평가를 받으려면, 시민들이 친근감을 느낄 필요가 있을 것 같습니다.
+	PRINTL 아르바이트를 해본다거나, 그 다음엔…… 아이돌로서 활동하다보면
+	PRINTL 응원해주는 사람이 늘어날 수도 있습니다.
 ELSEIF LOCAL:5 == 5
-	PRINTL なかなか順調にプレイが進んだようですね。
-	PRINTL リセットなしでここまで来れれば、
-	PRINTL 大分このゲームを攻略できていると言えそうです。
+	PRINTL 꽤 순조롭게 플레이가 진행된 것 같네요.
+	PRINTL 리셋없이도 여기까지 올 수 있다면,
+	PRINTL 이 게임의 상당 부분을 공략한 실력자라고 할 수 있을 것 같습니다.
 ELSEIF GAME_OPTION_CHECK_F(OPTION_endless)
-	PRINTL 残念ながら、ENDLESSモードでは촉수に勝つことはできません。
-	PRINTL せめて正義の味方たちが苦しまずに最期を迎えられたことを祈るばかりです。
+	PRINTL 유감스럽게도, ENDLESS모드에서는 촉수를 완전히 이길 수 없습니다.
+	PRINTL 적어도 정의의 히로인들이 최대한 고통없이 최후를 맞이하기를 바랄 뿐입니다.
+	PRINTL 전 세계 규모의 촉수 침략이라면, 오히려 이게 현실적인 게 아닐까요？
 ELSE
-	PRINTL この評価ということは、正義の味方らしく街を守りきったのですね。
-	PRINTL 恐らくあなたたちに感謝している人々も多いはず。
-	PRINTL おめでとうございます、あなたは正真正銘の英雄です！
+	PRINTL S등급을 달성했다는 건, 정의의 영웅답게 도시를 지켜냈다는 것이겠지요.
+	PRINTL 아마 여러분에게 고마워하는 사람들도 많을 거랍니다.
+	PRINTL 축하합니다, 당신은 진정한 영웅입니다!
 ENDIF
 PRINTW 
-;資産評価
-PRINTFORML 資産評価：%LOCALS:6%
+;자산 평가
+PRINTFORML 자산 평가：%LOCALS:6%
 IF LOCAL:6 <= 2
-	PRINTL お金のことを意識せずにプレイすればこんなものでしょう。
-	PRINTL 資産評価は現金のほうが好評価になるので、
-	PRINTL あえて使わずに取っておくべきかもしれません。
+	PRINTL 돈을 의식하지 않고 플레이하면 이 정도가 되겠지요.
+	PRINTL 자산 평가는 물건보다 현금 쪽이 더 좋은 평가가 되기 때문에,
+	PRINTL 굳이 사용하지 말고 아껴둬야 할지도 모릅니다.
 ELSEIF LOCAL:6 == 3 || LOCAL:6 == 4
-	PRINT なかなかのお金持ちですね。
+	PRINT 상당한 부자시군요.
 	IF LOCAL:6 == 3
-		PRINTFORML Ｃ評価です。
+		PRINTFORML Ｃ랭크입니다.
 	ELSE
-		PRINTFORML Ｂ評価です。
+		PRINTFORML Ｂ랭크입니다.
 	ENDIF
-	PRINTL 戦力に余裕があるならバイトしてみるのも手です。
+	PRINTL 전력에 여유가 있다면 아르바이트를 해보는 것도 방법입니다.
+	PRINTL 의외로 전투로 버는 것보다 캐릭터 스탯에 맞는 특별 활동이 돈이 더 잘 벌리더군요？
 	IF LOCAL:6 == 3
-		PRINTFORML 特に知力の高いキャラは研究助手をするのが良いでしょう。
+		PRINTFORML 예를 들어 지성이 높은 캐릭터는 중간에 연구 조교를 보낸다든가 하면 돈이 쏠쏠하겠죠？
 	ELSE
-		PRINTFORML 無駄な買い物を控えれば、もっと好評価になるでしょう。
+		PRINTFORML 무리한 쇼핑을 삼간다면, 좀 더 나은 평가가 되겠지요.
 	ENDIF
 ELSEIF LOCAL:6 == 5
-	PRINTL かなりの大金持ちですね。ここまで来たらＳ評価を目指しましょう。
-	PRINTL アイドル稼業って最初は辛いけれども、
-	PRINTL 有名になればなるほど稼げる…　ハズです。
+	PRINTL 꽤나 엄청난 부자로군요. 여기까지 왔다면 S등급도 어렵지 않을 겁니다.
+	PRINTL 아이돌 직업은 처음에는 힘들지만, 점점 유명해질 수록 돈도 잘 벌릴…겁니다.
+	PRINTL ……아마도요.
 ELSE
-	PRINTL ワンダフル！　これだけのお金を貯めるとは！
-	PRINTL あえてお金を使わず取っておいたりなど、苦労されたかと思います。
-	PRINTL そんなあなたに惜しみない賛辞を。素晴らしいです！
+	PRINTL 원더풀！ 이만큼이나 돈을 모으시다니 대단합니다！
+	PRINTL 굳이 돈을 쓰지 않고 아껴두거나 하는 등, 상당히 고생했을 것 같네요.
+	PRINTL S급 대부호에게 찬사를 보냅니다！ 굉장해 엄청나！
 ENDIF
 PRINTW 
 IF LOCAL > GLOBAL:110
@@ -697,46 +718,49 @@ IF LOCAL > GLOBAL:110
 	SAVEGLOBAL
 ENDIF
 IF LOCAL == 1
-	PRINTL ついに…　ついに総合Ｅ評価が出てしまいましたか…
-	PRINTL これを見ているアナタは엉터리 대마왕を名乗る義務があります。
+	PRINTL 마침내……정말로 종합 E등급이 나와버린 건가요…？
+	PRINTL 아무래도, 이걸 보고 있는 당신은 엉터리 대마왕을 자칭할 의무가 있겠군요.
 	IF LASTLOAD_VERSION == -1
-		PRINTL と思ったら、セーブ＆ロードなし…だと！？
-		PRINTL やるじゃねぇか旦那ァ、見直したぜッ！！！！
+		PRINTL ……잠깐, 세이브&로드도 없이…깼다고요？！
+		PRINTL 이야 형씨, 제법이잖냐！ 다시 봤다고 어이！！！！
 	ELSE
-		PRINTL な…　何かの間違いですよね？　…もしや確信犯ではありませんか？
+		PRINTL ……시험도 모든 문제를 다 알아야 빵점을 맞는다고 하는데,
+		PRINTL 어쩌면 당신은 힘을 숨긴 천재가 아닐까요…？
 	ENDIF
 	PRINTW 
 	CALL UNLOCK_ACHIEVEMENT(212,"엉터리 대마왕")
 ELSEIF LOCAL == 6
-	PRINTL ついに…　ついに総合Ｓ評価が出ましたか！
-	PRINTL これを見ているアナタはGVTマスターを名乗る資格があります。
+	PRINTL 마침내…… 정말로 종합 S등급이 나왔습니다！
+	PRINTL 이것을 보고 있는 당신은 eraGVT 마스터를 자칭할 자격이 있습니다.
 	IF LASTLOAD_VERSION == -1
-		PRINTL おまけにセーブ＆ロードなし…だと！？
-		PRINTL そのリセットしない姿勢に感服致します！　おめでとうございます！！！
+		PRINTL 게다가 세이브&로드도 없이…깼다고요？！
+		PRINTL 리셋조차 거부하는 그 자세에 감복했습니다！ 위대한 업적 달성을 축하드립니다！！！！
 	ELSE
-		PRINTL 何とも素晴らしい！　おめでとうございます！
+		PRINTL 정말 훌륭합니다！ 당신의 업적에 축하드립니다！！！！
 	ENDIF
 	PRINTL 
-	PRINTL ブラボーハラショーッ！
+	PRINTL Bravo―！ Xорошо！！
 	PRINTW 
 	CALL UNLOCK_ACHIEVEMENT(213,"eraGVT 마스터")
 ELSE
 	IF LASTLOAD_VERSION == -1
-		PRINTL な、なんと…なんとなんと！！
-		PRINTL アナタ、セーブ＆ロードしてませんね！！
-		PRINTL こいつはぁたまげた！！！
+		PRINTL 뭐, 뭐라…… 세상에 맙소사！！！
+		PRINTL 당신, 세이브&로드도 없이 깬 거였네요？！
+		PRINTL 이 자식 대단한 녀석일세！！！！！
 		PRINTL 
-		PRINTL そのリセットしない姿勢に感服致します！　おめでとうございます！
-	ELSE
-		PRINTL 以上、コメントコーナーでした。役に立つヒントはありましたか？
-		PRINTL ぜひとも次のプレイでまたお会いしましょう！
+		PRINTL 리셋조차 거부하는 그 자세에 감복했습니다！ 위대한 업적 달성을 축하드립니다！！！
 	ENDIF
 ENDIF
 IF LASTLOAD_VERSION == -1
 	CALL UNLOCK_ACHIEVEMENT(211,"패자(覇者)의 증표")
 ENDIF
+PRINTL 이상으로, 마법소녀 퍼펙트 게임 코너를 마치도록 하겠습니다.
+PRINTL 도움이 되는 힌트는 있었나요？
+SIF GLOBAL:213 == 1
+	PRINTL 뭐…… 어차피 eraGVT 마스터인 당신이라면 이미 다 알고 있겠지만요.
+PRINTL 그럼, 꼭 다음 게임에서 또 만나요！
 PRINTW 
-;各モードクリア回数の記録
+;각 모드 클리어 횟수 기록
 IF GAME_MODE_CHECK_F() == MODE_SOLO
 	GLOBAL:100 ++
 ELSEIF GAME_MODE_CHECK_F() == MODE_NORMAL
@@ -745,7 +769,7 @@ ELSEIF GAME_MODE_CHECK_F() == MODE_HARDCORE
 	GLOBAL:102 ++
 ENDIF
 SAVEGLOBAL
-;次周に向けて周回累積数を加算
+;다음 회차를 향해서 주회 누적수 가산
 FLAG:854 ++
 RETURN LOCAL
 
