--- a/ERB/게임_내_전투처리/ENEMY_ACTION.ERB
+++ b/ERB/게임_내_전투처리/ENEMY_ACTION.ERB
@@ -36,11 +36,14 @@ IF TCVARn:0 > 0
 			
 			;적 캐릭터 측의 공격 성공률
 			CALL ACT_HANTEI_TENTACLE_TO_CHARA, "AVOID_KOUGEKI"
+			;성패 판정을 지역 변수에 보존해 둔다
+			LOCAL:0 = RESULT
+
 			IF RESULT == 1
 				;연속 회피
 				TFLAG:33 += 1
 
-				;공격이 가드되는(カス当たり) 판정
+				;공격이 스치는(カス当たり) 판정
 				CALL ACT_HANTEI_TENTACLE_TO_CHARA, "AVOID_KOUGEKI"
 				IF RESULT == 0 && CLOTH_OUTER_PER + CLOTH_INNER_PER > 0
 					;지문: 적 캐릭터의 공격을 자력 회피
@@ -51,7 +54,7 @@ IF TCVARn:0 > 0
 					;의상에의 피해
 					CALL CLOTH_BATTLE_DAMAGE, 8
 				ELSE
-					;지문: 적 캐릭터의 공격을 回避
+					;지문: 적 캐릭터의 공격을 회피
 					CALL MESSAGE_BATTLE_TENTACLE_ATTACK_FALSE
 					;지문: 세뇌/흑화 캐릭터의 공격이 회피됐다
 					SIF ENEMY_TYPE_CHECK_F("AKUOTI")
@@ -62,9 +65,12 @@ IF TCVARn:0 > 0
 				SIF CONFIG_CHECK_EVENT_F(3) > 0
 					CALL PERFORM_CHEERS_TENTACLE_MISS_HANTEI
 
+			;공격 범위에 캐릭터가 없다
 			ELSEIF RESULT == 2
 				;연속 회피
-				TFLAG:33 += 1
+				;강화 반격의 경우 거리로 인한 회피라면 콤보가 더 쌓이지 않는다
+				SIF TCVARn:2 != 자세：강화반격
+					TFLAG:33 += 1
 
 				;공격 범위 외
 				CALL MESSAGE_BATTLE_TENTACLE_ABSENCE
@@ -73,19 +79,40 @@ IF TCVARn:0 > 0
 				SIF CONFIG_CHECK_EVENT_F(3) > 0
 					CALL PERFORM_CHEERS_TENTACLE_MISS_HANTEI
 			ELSE
-				;연속 회피 초기화
-				TFLAG:33 = 0
+				;연속 회피 초기화 (반격의 경우 콤보를 이행해야 하므로 맨 아래에서 공통으로 처리한다)
+				;TFLAG:33 = 0
+
+				;방어 플래그일 시 10%확률, 반격 플래그일 시 7% 확률로 절대 방어, 강화 반격은 무조건 절대 방어
+				IF TCVARn:2 == 자세：강화반격 || (TCVARn:2 == 자세：방어 && RAND:100 < 10) || (TCVARn:2 == 자세：반격 && RAND:100 < 7)
+					LOCAL:1 = 10
+					;절대 방어 플래그
+					TCVARn:200 = 1
+					;지문: 적 캐릭터의 공격을 절대 방어
+					CALL MESSAGE_BATTLE_TENTACLE_ATTACK_PERFECT_GUARD
+					;지문: 세뇌/흑화 캐릭터의 공격이 절대 방어됐다
+					SIF ENEMY_TYPE_CHECK_F("AKUOTI")
+						CALL MESSAGE_OTHER_BATTLE_TENTACLE_ATTACK_PERFECT_GUARD
 
 				;치명타 판정
 				;FEAT 효과에 의한 피치명타 방지
-				IF RAND:100 < 5 && FSTYLE_NAME_F(TARGET,TCVARn:0) != "장갑" && TALENT:타고난전사 == 0
+				;반격의 경우 10% 확률로 치명타 피해를 입는다
+				ELSEIF RAND:100 < 5 || (RAND:100 < 10 && TCVARn:2 == 자세：반격) && (FSTYLE_NAME_F(TARGET,TCVARn:0) != "장갑" && TALENT:타고난전사 == 0)
 					LOCAL:1 = 15
 					;지문: 적 캐릭터의 공격이 치명타 히트
 					CALL MESSAGE_BATTLE_TENTACLE_ATTACK_CRITICAL_HIT
 					;지문: 세뇌/흑화 캐릭터가 공격을 치명타로 입혔다
 					SIF ENEMY_TYPE_CHECK_F("AKUOTI")
 						CALL MESSAGE_OTHER_BATTLE_TENTACLE_ATTACK_CRITICAL_HIT
-						
+
+				;통상적인 방어
+				ELSEIF TCVARn:2 == 자세：방어 || TCVARn:2 == 자세：반격 
+					LOCAL:1 = 10
+					;지문: 적 캐릭터의 공격을 방어
+					CALL MESSAGE_BATTLE_TENTACLE_ATTACK_GUARD
+					;지문: 세뇌/흑화 캐릭터의 공격이 방어됐다
+					SIF FLAG:110
+						CALL MESSAGE_OTHER_BATTLE_TENTACLE_ATTACK_GUARD
+
 				ELSE
 					LOCAL:1 = 10
 					;지문: 적 캐릭터의 공격이 통상 히트
@@ -103,8 +130,86 @@ IF TCVARn:0 > 0
 				;의상에 따른 보정
 				CALL CLOTH_BATTLE_HOSEI, "TAIRYOKU"
 				LOCAL:2 = LOCAL:2 * RESULT / 100
+
+				;[교란] 스타일의 입는 피해량 증대
+				IF FSTYLE_NAME_F(TARGET,TCVARn:0) == "교란"
+					TIMES LOCAL:2, 1.15
+				;[장갑] 스타일의 입는 피해량 경감
+				ELSEIF FSTYLE_NAME_F(TARGET,TCVARn:0) == "장갑"
+					TIMES LOCAL:2, 0.85
+				;[전력] 버스트 공격의 입는 피해량 증대
+				ELSEIF GETBIT(TCVARn:217, 0) && FSTYLE_NAME_F(TARGET,TCVARn:0) == "전력"
+					TIMES LOCAL:2, 1.25
+				;[반격] 버스트 공격의 입는 피해량 증대, 우선 더 늘릴지 말지는 지켜보자
+				;ELSEIF GETBIT(TCVARn:217, 0) && FSTYLE_NAME_F(TARGET,TCVARn:0) == "반격"
+				;	TIMES LOCAL:2, 1.25
+				ENDIF
 				
-				;체력 피해량에 따른 SOURCE 획득
+				[SKIPSTART]
+				;[반격] 스타일의 버스트 공격 효과 처리를 위해 순서를 피해량 계산 뒤로 옮긴다
+				;체력 피해에 의한 SOURCE 획득
+				IF (100 * LOCAL:2 / MAXBASE:체력) < 5
+					LOCAL:8 = 0
+					LOCAL:10 = 150
+					LOCAL:11 = 0
+				ELSEIF (100 * LOCAL:2 / MAXBASE:체력) < 15
+					LOCAL:8 = 0
+					LOCAL:10 = 300
+					LOCAL:11 = 0
+				ELSEIF (100 * LOCAL:2 / MAXBASE:체력) < 25
+					LOCAL:8 = 0
+					LOCAL:10 = 600
+					LOCAL:11 = 0
+				ELSEIF (100 * LOCAL:2 / MAXBASE:체력) < 35
+					LOCAL:8 = 0
+					LOCAL:10 = 1000
+					LOCAL:11 = 200
+				ELSEIF (100 * LOCAL:2 / MAXBASE:체력) < 45
+					LOCAL:8 = 200
+					LOCAL:10 = 2000
+					LOCAL:11 = 400
+				ELSEIF (100 * LOCAL:2 / MAXBASE:체력) < 55
+					LOCAL:8 = 400
+					LOCAL:10 = 4000
+					LOCAL:11 = 1000
+				ELSEIF (100 * LOCAL:2 / MAXBASE:체력) < 65
+					LOCAL:8 = 1000
+					LOCAL:10 = 10000
+					LOCAL:11 = 2000
+				ELSEIF (100 * LOCAL:2 / MAXBASE:체력) < 75
+					LOCAL:8 = 2000
+					LOCAL:10 = 20000
+					LOCAL:11 = 4000
+				ELSE
+					LOCAL:8 = 4000
+					LOCAL:10 = 40000
+					LOCAL:11 = 10000
+				ENDIF
+				LOCAL:8 += LOCAL:2 / 8
+				LOCAL:10 += LOCAL:2
+				LOCAL:11 += LOCAL:2 / 4
+				[SKIPEND]
+
+				FONTBOLD
+				IF GETBIT(TCVARn:217, 0) && FSTYLE_NAME_F(TARGET,TCVARn:0) == "반격"
+					PRINTFORML {LOCAL:2}의 피해가 축적됐다！
+				ELSEIF TCVARn:200 > 0
+					PRINTFORML {LOCAL:2}의 피해를 무효화했다！
+				ELSE
+					PRINTFORML {LOCAL:2}의 피해를 입었다！
+				ENDIF
+				FONTREGULAR
+				PRINTL 
+				
+				;절대 방어일 경우 캐릭터가 직격당하는 것이 아니라고 판단하고 피해량, SOURCE 처리를 스킵한다
+				SIF TCVARn:200 > 0
+					GOTO KOUGEKI_SKIP
+
+				SIF BASE:체력 - (LOCAL:2) <= 0
+					LOCAL:2 = BASE:체력
+				BASE:체력 -= LOCAL:2
+
+				;체력 피해에 의한 SOURCE 획득
 				IF (100 * LOCAL:2 / MAXBASE:체력) < 5
 					LOCAL:8 = 0
 					LOCAL:10 = 150
@@ -146,20 +251,18 @@ IF TCVARn:0 > 0
 				LOCAL:10 += LOCAL:2
 				LOCAL:11 += LOCAL:2 / 4
 
-				FONTBOLD
-				PRINTFORML {LOCAL:2}의 피해를 입었다！
-				FONTREGULAR
-				PRINTL 
-				SIF BASE:체력 - (LOCAL:2) <= 0
-					LOCAL:2 = BASE:체력
-				BASE:체력 -= LOCAL:2
+				$KOUGEKI_SKIP
 				
 				;의상에의 피해
 				CALL CLOTH_BATTLE_DAMAGE, 8 * (LOCAL:1 + LOCAL:10 / 2000) / 10
 
+				;방어 시의 응원
+				;IF TCVARn:2 == 자세：반격 || TCVAR:2 == 자세：강화반격
+				;	CALL PERFORM_CHEERS_TENTACLE_GUARD_HANTEI
 				;피격 시의 응원
 				SIF CONFIG_CHECK_EVENT_F(3) > 0
 					CALL PERFORM_CHEERS_TENTACLE_HIT_HANTEI
+				
 
 				;적 단독의 추가 효과
 				SIF TCVARn:14 > 0
@@ -168,10 +271,16 @@ IF TCVARn:0 > 0
 				;상태 이상：기절
 				CALL STATE_CHANGE_KIZETU_DAMAGE, LOCAL:2
 
+				;절대 방어일 경우 심경이 고양으로 변하기 쉽다
+				;심경 변화: 고양
+				IF TCVARn:200 > 0
+					CALL SHINKYOU_CHANGE, "KOUYOU"
 				;심경 변화：분노 혹은 체념
-				SIF (TCVARn:12 & 기절) == 0
+				ELSEIF (TCVARn:12 & 기절) == 0
 					CALL SHINKYOU_CHANGE, "IKARI_TEIKAN"
+				ENDIF
 			ENDIF
+
 		CASE 2
 			;휘감는다　휘감는다가 성공하여 구속 상태가 되고 나서 성행위로 옮긴다
 			;지문: 적 캐릭터가 휘감기를 개시
@@ -182,6 +291,9 @@ IF TCVARn:0 > 0
 			
 			;적 캐릭터 측의 휘감는다 판정
 			CALL ACT_HANTEI_TENTACLE_TO_CHARA, "AVOID_KARAMITUKU"
+			;성패 판정을 지역 변수에 보존해 둔다
+			LOCAL:0 = RESULT
+
 			IF RESULT == 1
 				;연속 회피
 				TFLAG:33 += 1
@@ -198,7 +310,9 @@ IF TCVARn:0 > 0
 	
 			ELSEIF RESULT == 2
 				;연속 회피
-				TFLAG:33 += 1
+				;반격의 경우 거리로 인한 회피라면 콤보가 더 쌓이지 않는다
+				SIF TCVARn:2 != 자세：강화반격
+					TFLAG:33 += 1
 
 				;공격 범위 외
 				CALL MESSAGE_BATTLE_TENTACLE_ABSENCE
@@ -207,8 +321,8 @@ IF TCVARn:0 > 0
 				SIF CONFIG_CHECK_EVENT_F(3) > 0
 					CALL PERFORM_CHEERS_TENTACLE_MISS_HANTEI
 			ELSE
-				;연속 회피 초기화
-				TFLAG:33 = 0
+				;연속 회피 초기화 (반격의 경우 콤보를 이행해야 하므로 맨 아래에서 공통으로 처리한다)
+				;TFLAG:33 = 0
 
 				;피해량 계산　통상 입는 피해량의 1/4
 				CALL DAMAGE, "CHARA"
@@ -220,7 +334,6 @@ IF TCVARn:0 > 0
 				TCVARn:8 = 2
 				
 				;퇴피용
-				LOCAL:99 = 0
 				LOCAL:99 = RESULT
 				
 				;지문: 적 캐릭터의 휘감기 성공
@@ -244,23 +357,23 @@ IF TCVARn:0 > 0
 				BASE:체력 -= LOCAL:2
 
 				;기력 뺄셈　현재는 고정으로 -50
-				IF TCVARn:2 == 자세：방어
-					LOCAL:2 = 25
+				IF TCVARn:2 == 자세：방어 || TCVARn:2 == 자세：반격
+					LOCAL:3 = 25
 				ELSE
-					LOCAL:2 = 50
+					LOCAL:3 = 50
 				ENDIF
 				
 				;의상에 따른 보정
 				CALL CLOTH_BATTLE_HOSEI, "KIRYOKU"
-				LOCAL:2 = LOCAL:2 * RESULT / 100
+				LOCAL:3 = LOCAL:3 * RESULT / 100
 				
 				FONTBOLD
-				PRINTFORML %BASENAME:1%이 {LOCAL:2} 줄었다！
+				PRINTFORML %BASENAME:1%이 {LOCAL:3} 줄었다！
 				FONTREGULAR
 				PRINTL 
-				SIF BASE:기력 < LOCAL:2
-					LOCAL:2 = BASE:기력
-				BASE:기력 -= LOCAL:2
+				SIF BASE:기력 < LOCAL:3
+					LOCAL:3 = BASE:기력
+				BASE:기력 -= LOCAL:3
 				
 				FONTBOLD
 				SETCOLOR 250,0,0
@@ -280,8 +393,8 @@ IF TCVARn:0 > 0
 				
 				;휘감는다 성공 직후, 1회분 범한다
 				PRINTL 
-				;욕망 3 미만이라면 잡힌 직후에는 Ｖ방어 상태가 된다
-				SIF ABL:욕망 < 3 && ISFEMALE() && BASE:체력>0
+				;욕망 3 미만이라면 잡힌 직후에는 체력이 소진되지 않았다면 Ｖ방어 상태가 된다
+				SIF ABL:욕망 < 3 && ISFEMALE() && BASE:체력 > 0
 					TCVARn:2 = 자세：Ｖ방어
 				GOTO LOOP_TOP
 				
@@ -296,6 +409,9 @@ IF TCVARn:0 > 0
 			
 			;적 캐릭터 측의 체액 내뿜기 성공률
 			CALL ACT_HANTEI_TENTACLE_TO_CHARA, "AVOID_TAIEKI"
+			;성패 판정을 지역 변수에 보존해 둔다
+			LOCAL:0 = RESULT
+
 			IF RESULT == 1
 				;연속 회피
 				TFLAG:33 += 1
@@ -312,7 +428,9 @@ IF TCVARn:0 > 0
 
 			ELSEIF RESULT == 2
 				;연속 회피
-				TFLAG:33 += 1
+				;강화 반격의 경우 거리로 인한 회피라면 콤보가 더 쌓이지 않는다
+				SIF TCVARn:2 != 자세：강화반격
+					TFLAG:33 += 1
 
 				;공격 범위 외
 				CALL MESSAGE_BATTLE_TENTACLE_ABSENCE
@@ -321,20 +439,31 @@ IF TCVARn:0 > 0
 				SIF CONFIG_CHECK_EVENT_F(3) > 0
 					CALL PERFORM_CHEERS_TENTACLE_MISS_HANTEI
 			ELSE
-				;연속 회피 초기화
-				TFLAG:33 = 0
+				;연속 회피 초기화 (반격의 경우 콤보를 이행해야 하므로 맨 아래에서 공통으로 처리한다)
+				;TFLAG:33 = 0
 
-				;지문: 적 캐릭터의 체액 내뿜기가 히트
-				CALL MESSAGE_BATTLE_TENTACLE_TAIEKI_HIT
-				;지문: 세뇌/흑화 캐릭터가「체액을 내뿜는다」를 성공시켰다
-				SIF ENEMY_TYPE_CHECK_F("AKUOTI")
-					CALL MESSAGE_OTHER_BATTLE_TENTACLE_TAIEKI_HIT
+				;방어 플래그일 시 20% 확률로, 강화 반격 플래그일 시 15% 확률로, 통상 반격은 7% 확률로 절대 방어
+				IF (TCVARn:2 == 자세：방어 && RAND:100 < 20 ) || (TCVARn:2 == 자세：강화반격 && RAND:100 < 15) || (TCVARn:2 == 자세：반격 && RAND:100 < 7)
+					TCVARn:200 = 1
+					;지문: 적 캐릭터의 공격을 절대 방어
+					CALL MESSAGE_BATTLE_TENTACLE_ATTACK_PERFECT_GUARD
+					;지문: 세뇌/흑화 캐릭터의 공격이 절대 방어됐다
+					SIF FLAG:110
+						CALL MESSAGE_OTHER_BATTLE_TENTACLE_ATTACK_PERFECT_GUARD
+
+				ELSE
+					;지문: 적 캐릭터의 체액 내뿜기가 히트
+					CALL MESSAGE_BATTLE_TENTACLE_TAIEKI_HIT
+					;지문: 세뇌/흑화 캐릭터가「체액을 내뿜는다」를 성공시켰다
+					SIF ENEMY_TYPE_CHECK_F("AKUOTI")
+						CALL MESSAGE_OTHER_BATTLE_TENTACLE_TAIEKI_HIT
+				ENDIF
 				
 				;피해량 계산　방어를 무시한 고정 피해
 				CALL TENTACLE_LEVEL
 				LOCAL:2 = 120 + RESULT * 20
 				LOCAL:3 = LOCAL:2
-				IF TCVARn:2 == 자세：방어
+				IF TCVARn:2 == 자세：방어 || TCVARn:2 == 자세：반격
 					LOCAL:2 /= 2
 					LOCAL:3 /= 2
 				ENDIF
@@ -377,9 +506,12 @@ IF TCVARn:0 > 0
 				LOCAL:3 = LOCAL:3 * RESULT / 100
 				
 				;굴복, 고통, 공포의 SOURCE
-				LOCAL:8 += LOCAL:2 / 4
-				LOCAL:10 += LOCAL:2 * 2
-				LOCAL:11 += LOCAL:2 / 2
+				;절대 방어의 경우 무효
+				IF TCVARn:200 > 0
+					LOCAL:8 += LOCAL:2 / 4
+					LOCAL:10 += LOCAL:2 * 2
+					LOCAL:11 += LOCAL:2 / 2
+				ENDIF
 
 				;[교란] 스타일의 입는 피해량 증대
 				IF FSTYLE_NAME_F(TARGET,TCVARn:0) == "교란"
@@ -393,9 +525,19 @@ IF TCVARn:0 > 0
 				ELSEIF GETBIT(TCVARn:217, 0) && FSTYLE_NAME_F(TARGET,TCVARn:0) == "전력"
 					TIMES LOCAL:2, 1.25
 					TIMES LOCAL:3, 1.25
+				;[반격] 버스트 공격의 입는 피해량 증대, 우선 더 늘릴지 말지는 지켜보자
+				;ELSEIF GETBIT(TCVARn:217n, 0) && FSTYLE_NAME_F(TARGET,TCVARn:0) == "반격"
+				;	TIMES LOCAL:2, 1.25
+				;	TIMES LOCAL:3, 1.25
 				ENDIF
 				FONTBOLD
-				PRINTFORML {LOCAL:2}의 피해를 입었다！
+				IF GETBIT(TCVARn:217, 0) && FSTYLE_NAME_F(TARGET,TCVARn:0) == "반격"
+					PRINTFORML {LOCAL:2}의 피해가 축적됐다！
+				ELSEIF TCVARn:200 > 0
+					PRINTFORML {LOCAL:2}의 피해를 무효화했다！
+				ELSE
+					PRINTFORML {LOCAL:2}의 피해를 입었다！
+				ENDIF
 				FONTREGULAR
 				SIF BASE:체력 - (LOCAL:2) <= 0
 					LOCAL:2 = BASE:체력
@@ -413,9 +555,10 @@ IF TCVARn:0 > 0
 				SIF BASE:기력 - (LOCAL:3) <= 0
 					LOCAL:3 = BASE:기력
 				BASE:기력 -= LOCAL:3
-				IF GAME_OPTION_CHECK_F(OPTION_스탯저하있음)
+
+				SIF GAME_OPTION_CHECK_F(OPTION_스탯저하있음)
 					BASE:TARGET:기초기력 -= LOCAL:3 / 2
-				ENDIF
+
 				;의상에의 피해
 				CALL CLOTH_BATTLE_DAMAGE, 15
 
@@ -433,9 +576,21 @@ IF TCVARn:0 > 0
 				;피격 시의 응원
 				SIF CONFIG_CHECK_EVENT_F(3) > 0
 					CALL PERFORM_CHEERS_TENTACLE_HIT_HANTEI
+
+				;절대 방어일 경우 심경이 고양으로 변하기 쉽다
+				;심경 변화: 고양
+				IF TCVARn:200 > 0
+					CALL SHINKYOU_CHANGE, "KOUYOU"
+				;심경 변화: 분노 혹은 체념
+				ELSE
+					CALL SHINKYOU_CHANGE, "IKARI_TEIKAN"
+				ENDIF
 				
-				;심경 변화：분노 혹은 체념
-				CALL SHINKYOU_CHANGE, "IKARI_TEIKAN"
+				;상태 이상: 끈적끈적
+				CALL STATE_CHANGE_BETOBETO, 15
+
+				;상태 이상: 배란
+				CALL STATE_CHANGE_HAIRAN, 15
 
 				;피격될 때마다, 기초 방어값에 따라 ＥＸ게이지가 상승한다
 				SIF CFLAG:1 != 2
@@ -509,6 +664,9 @@ IF TCVARn:0 > 0
 			
 			;적 캐릭터 측의 넘어뜨리기 판정
 			CALL ACT_HANTEI_TENTACLE_TO_CHARA, "AVOID_OSHITAOSU"
+			;성패 판정을 지역 변수에 보존해 둔다
+			LOCAL:0 = RESULT
+
 			IF RESULT == 1
 				;연속 회피
 				TFLAG:33 += 1
@@ -525,7 +683,9 @@ IF TCVARn:0 > 0
 				
 			ELSEIF RESULT == 2
 				;연속 회피
-				TFLAG:33 += 1
+				;반격의 경우 거리로 인한 회피라면 콤보가 더 쌓이지 않는다
+				SIF TCVARn:2 != 자세：강화반격
+					TFLAG:33 += 1
 
 				;공격 범위 외
 				CALL MESSAGE_BATTLE_TENTACLE_ABSENCE
@@ -534,8 +694,8 @@ IF TCVARn:0 > 0
 				SIF CONFIG_CHECK_EVENT_F(3) > 0
 					CALL PERFORM_CHEERS_TENTACLE_MISS_HANTEI
 			ELSE
-				;연속 회피 초기화
-				TFLAG:33 = 0
+				;연속 회피 초기화 (반격의 경우 콤보를 이행해야 하므로 맨 아래에서 공통으로 처리한다)
+				;TFLAG:33 = 0
 
 				;피해량 계산　통상 입는 피해량의 1/4
 				CALL DAMAGE, "CHARA"
@@ -547,7 +707,6 @@ IF TCVARn:0 > 0
 				TCVARn:8 = 2
 				
 				;퇴피용
-				LOCAL:99 = 0
 				LOCAL:99 = RESULT
 				
 				;지문: 적 캐릭터의 넘어뜨리기 성공
@@ -572,22 +731,22 @@ IF TCVARn:0 > 0
 				
 				;기력 뺄셈　현재는 고정으로 -50
 				IF TCVARn:2 == 자세：방어
-					LOCAL:2 = 25
+					LOCAL:3 = 25
 				ELSE
-					LOCAL:2 = 50
+					LOCAL:3 = 50
 				ENDIF
 				
 				;의상에 따른 보정
 				CALL CLOTH_BATTLE_HOSEI, "KIRYOKU"
-				LOCAL:2 = LOCAL:2 * RESULT / 100
+				LOCAL:3 = LOCAL:3 * RESULT / 100
 				
 				FONTBOLD
-				PRINTFORML %BASENAME:1%이 {LOCAL:2} 줄었다！
+				PRINTFORML %BASENAME:1%이 {LOCAL:3} 줄었다！
 				FONTREGULAR
 				PRINTL 
-				SIF BASE:기력 < LOCAL:2
-					LOCAL:2 = BASE:기력
-				BASE:기력 -= LOCAL:2
+				SIF BASE:기력 < LOCAL:3
+					LOCAL:3 = BASE:기력
+				BASE:기력 -= LOCAL:3
 
 				FONTBOLD
 				SETCOLOR 250,0,0
@@ -623,6 +782,9 @@ IF TCVARn:0 > 0
 			
 			;적 캐릭터 측의 사악한 파동의 성공률
 			CALL ACT_HANTEI_TENTACLE_TO_CHARA, "AVOID_HADOU"
+			;성패 판정을 지역 변수에 보존해 둔다
+			LOCAL:0 = RESULT
+
 			IF RESULT == 1
 				;연속 회피
 				TFLAG:33 += 1
@@ -639,7 +801,9 @@ IF TCVARn:0 > 0
 
 			ELSEIF RESULT == 2
 				;연속 회피
-				TFLAG:33 += 1
+				;반격의 경우 거리로 인한 회피라면 콤보가 더 쌓이지 않는다
+				SIF TCVARn:2 != 자세：강화반격
+					TFLAG:33 += 1
 
 				;공격 범위 외
 				CALL MESSAGE_BATTLE_TENTACLE_ABSENCE
@@ -648,15 +812,25 @@ IF TCVARn:0 > 0
 				SIF CONFIG_CHECK_EVENT_F(3) > 0
 					CALL PERFORM_CHEERS_TENTACLE_MISS_HANTEI
 			ELSE
-				;연속 회피 초기화
-				TFLAG:33 = 0
+				;연속 회피 초기화 (반격의 경우 콤보를 이행해야 하므로 맨 아래에서 공통으로 처리한다)
+				;TFLAG:33 = 0
 
-				;지문: 적 캐릭터의 사악한 파동이 히트
-				CALL MESSAGE_BATTLE_TENTACLE_HADOU_HIT
-				;지문: 세뇌/흑화 캐릭터가 사악한 파동을 명중시켰다
-				SIF ENEMY_TYPE_CHECK_F("AKUOTI")
-					CALL MESSAGE_OTHER_BATTLE_TENTACLE_HADOU_HIT
-				
+				;방어 플래그일 시 15%확률로, 강화 반격 플래그일 시 10% 확률로 절대 방어
+				IF (TCVARn:2 == 자세：방어 && RAND:100 < 15) || (TCVARn:2 == 자세：강화반격 && RAND:100 < 10)
+					TCVARn:200 = 1
+					;지문: 적 캐릭터의 공격을 절대 방어
+					CALL MESSAGE_BATTLE_TENTACLE_ATTACK_PERFECT_GUARD
+					;지문: 세뇌/흑화 캐릭터의 공격이 절대 방어됐다
+					SIF FLAG:110
+						CALL MESSAGE_OTHER_BATTLE_TENTACLE_ATTACK_PERFECT_GUARD
+				ELSE
+					;지문: 적 캐릭터의 사악한 파동이 히트
+					CALL MESSAGE_BATTLE_TENTACLE_HADOU_HIT
+					;지문: 세뇌/흑화 캐릭터가 사악한 파동을 명중시켰다
+					SIF ENEMY_TYPE_CHECK_F("AKUOTI")
+						CALL MESSAGE_OTHER_BATTLE_TENTACLE_HADOU_HIT
+				ENDIF
+
 				;피해량 계산　방어력을 무시한 고정 피해
 				CALL TENTACLE_LEVEL
 				LOCAL:2 = 60 + RESULT * 10
@@ -706,9 +880,12 @@ IF TCVARn:0 > 0
 				LOCAL:3 = LOCAL:3 * RESULT / 100
 				
 				;굴복, 고통, 공포의 SOURCE
-				LOCAL:8 += LOCAL:2 / 4
-				LOCAL:10 += LOCAL:2 * 2
-				LOCAL:11 += LOCAL:2 / 2
+				;절대 방어일 경우 무효
+				IF TCVARn:200 == 0
+					LOCAL:8 += LOCAL:2 / 4
+					LOCAL:10 += LOCAL:2 * 2
+					LOCAL:11 += LOCAL:2 / 2
+				ENDIF
 
 				;[교란] 스타일의 입는 피해량 증대
 				IF FSTYLE_NAME_F(TARGET,TCVARn:0) == "교란"
@@ -722,14 +899,25 @@ IF TCVARn:0 > 0
 				ELSEIF GETBIT(TCVARn:217, 0) && FSTYLE_NAME_F(TARGET,TCVARn:0) == "전력"
 					TIMES LOCAL:2, 1.25
 					TIMES LOCAL:3, 1.25
+				;[반격] 버스트 공격의 입는 피해량 증대, 우선 더 늘릴지 말지는 지켜보자
+				;ELSEIF GETBIT(TCVARn:217, 0) && FSTYLE_NAME_F(TARGET,TCVARn:0) == "반격"
+				;	TIMES LOCAL:2, 1.25
+				;	TIMES LOCAL:3, 1.25
 				ENDIF
 
 				FONTBOLD
 				PRINTFORML {LOCAL:2}의 피해를 입었다！
 				FONTREGULAR
+				
+				;절대 방어일 경우 체력 및 기력 피해량 처리를 스킵한다
+				SIF TCVARn:200 > 0
+					GOTO HADOU_SKIP
+
 				SIF BASE:체력 - (LOCAL:2) <= 0
 					LOCAL:2 = BASE:체력
 				BASE:체력 -= LOCAL:2
+
+				$HADOU_SKIP
 				
 				FONTBOLD
 				PRINTFORML %BASENAME:1%이 {LOCAL:3} 줄었다！
@@ -751,8 +939,14 @@ IF TCVARn:0 > 0
 				SIF TCVARn:14 > 0
 					CALL STATE_CHANGE_EXTRAEFFECT,TCVARn:15
 
-				;심경 변화：분노 혹은 체념
-				CALL SHINKYOU_CHANGE, "IKARI_TEIKAN"
+				;절대 방어일 경우 심경이 고양으로 변하기 쉽다
+				;심경 변화: 고양
+				IF TCVARn:200 > 0
+					CALL SHINKYOU_CHANGE, "KOUYOU"
+				;심경 변화: 분노 혹은 체념
+				ELSE
+					CALL SHINKYOU_CHANGE, "IKARI_TEIKAN"
+				ENDIF
 
 				;피격될 때마다, 기초 방어값에 따라 ＥＸ게이지가 상승한다
 				SIF CFLAG:1 != 2
@@ -761,6 +955,94 @@ IF TCVARn:0 > 0
 			
 	ENDSELECT
 	
+	[SKIPSTART]
+	;[반격] 스타일의 버스트 공격 오버차지
+	IF GETBIT(TCVARn:217, 0) && FSTYLE_NAME_F(TARGET, TCVARn:0) == "반격" 
+		;소모도(체력+기력+{피로도*100})에 따라 최대 체력의 몇%까지 버틸 수 있는지 정해진다
+		;100%~75%: 최대 체력의 85% || 74%~40%: 최대 체력의 70% || 39%~: 최대 체력의 50%
+		SELECTCASE PERCENT_CAL_F(BASE:체력 + BASE:기력 + (CFLAG:99 * 150), MAXBASE:체력 + MAXBASE:기력)
+			CASE 0 TO 39
+				LOCAL:5 = 50
+			CASE 40 TO 74
+				LOCAL:5 = 70
+			CASEELSE
+				LOCAL:5 = 85
+		ENDSELECT
+
+		CALL PERCENT_CAL, LOCAL:2, MAXBASE:체력
+		IF RESULT > LOCAL:5
+			;지문: 에너지 과잉 축적
+			CALL MESSAGE_BATTLE_TENTACLE_ATTACK_OVERCHARGED
+			;지문: 세뇌/흑화 캐릭터가 조작 캐릭터의 에너지 과잉 축적을 봤다
+			SIF FLAG:110
+				CALL MESSAGE_OTHER_BATTLE_TENTACLE_ATTACK_OVERCHARGED
+
+			LOCAL:99 = LOCAL:2 - MAXBASE:체력 * (RESULT - LOCAL:5) / 100
+			
+			FONTBOLD
+			PRINTFORML {LOCAL:99}의 피해를 입었다！
+			SIF BASE:체력 - (LOCAL:99) <= 0
+				LOCAL:99 = BASE:체력
+			BASE:체력 -= LOCAL:99
+
+			
+			;기력까지 소모할 지는 일단 지켜보자
+			;PRINTFORML %BASENAME:1%이 {LOCAL:2} 줄었다！
+			;FONTREGULAR
+			;PRINTL 
+			;SIF BASE:기력 - (LOCAL:2) <= 0
+			;	LOCAL:2 = BASE:기력
+			;BASE:기력 -= LOCAL:2
+			
+
+			;과잉 축적 5%마다 피로도가 2씩 상승한다
+			FOR RESULT, RESULT, 0, 5
+				TFLAG:99 += 2
+			NEXT
+
+		ENDIF
+	ENDIF
+	[SKIPEND]
+
+	;마조기질이 있을 경우 피해량에 따라 ＥＸ게이지가 추가로 상승한다
+	IF TALENT:마조기질 && LOCAL:0 == 0
+		IF ABL:마조끼 < 2
+			PRINTFORML %PRINT_TRANSCALLNAME(TARGET)%의 전신을 덮치는 고통에 눈물이 고이면서도, 어째선지 다음 공격을 기대하고 있었다……
+		;ELSEIF ABL:마조끼 < 4
+		ELSE
+			PRINTFORML %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 자신을 억누르는 고통아닌 쾌락에, 마음 속 깊이 기뻐하고 있었다……
+		;아이디어가 딱히 생각 안 나서 일단 보류
+		;ELSE
+		;	PRINTFORML %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 
+		ENDIF
+
+		LOCAL:6 = 50 * ABL:마조끼
+		SIF ABL:마조끼 == 0
+			LOCAL:6 = 50
+		TCVARn:6 += MIN(RAND:(LOCAL:2 / 10),LOCAL:6)
+		
+		;욕정이 미량으로 증가
+		LOCAL:3 = RAND:MAX((MAXBASE:기력 * (LOCAL:1 - 5 / 5) * 8 / 100), 1) + 10
+		COMMON_PALAM:7 += LOCAL:3 * 10
+	ENDIF
+
+	;[반격] 스타일은 반격 함수 내에서 판정을 넘길 경우 캐릭터가 행동 턴을 추가로 가진다
+	SIF !(TCVARn:12 & 기절) && TCVARn:2 == 자세：반격 || TCVARn:2 == 자세：강화반격
+		CALL HANGEKI_TO_TENTACLE, TFLAG:10, LOCAL:0, LOCAL:2
+
+	;절대 방어 플래그 제거
+	TCVARn:200 = 0
+
+	;FEAT 효과에 의한 공중 대시 게이지 회복
+	IF LOCAL:0 == 2 && GETBIT(TCVARn:216, 1) && (BASE:공중대시 < MAXBASE:공중대시) && TCVARn:210 != 추가발동금지
+		BASE:공중대시 ++
+		PRINTL [에어마스터] 의 효과로, 공중 대시 게이지를 1 회복했다！
+	ENDIF
+
+	;연속 회피 초기화
+	SIF TFLAG:10 != 4 && LOCAL:0 == 0
+		TFLAG:33 = 0
+
 	;공격에 의해 얻은 SOURCE 계산
 	;의복의 손상에 의한 치정의 취득은 COMMON_PALAM_CAL 내부에서 행하고 있다
 	CALL PALAM_CAL, 0, 0, 0, 0, 0, 0, 0, LOCAL:7, LOCAL:8, LOCAL:9, LOCAL:10, LOCAL:11
