--- a/ERB/게임_내_전투처리/전투커맨드(캐릭터)/COMF0.ERB
+++ b/ERB/게임_내_전투처리/전투커맨드(캐릭터)/COMF0.ERB
@@ -88,8 +88,8 @@ SIF MOVESELECT == 3
 	TIMES LOCAL:0, 1.50
 SIF BASE:체력 + LOCAL:0 >= MAXBASE:체력
 	LOCAL:0 = MAXBASE:체력 - BASE:체력
-;체력이 다한 경우, 체력이 회복되지 않는다
-SIF BASE:체력 == 0
+;[스태미나] 가 없으며 체력이 다한 경우, 체력이 회복되지 않는다
+SIF BASE:체력 == 0 && TALENT:스태미나 == 0
 	LOCAL:0 = 0
 BASE:체력 += LOCAL:0
 
