--- a/ERB/게임_내_전투처리/전투커맨드(캐릭터)/COMF44.ERB
+++ b/ERB/게임_내_전투처리/전투커맨드(캐릭터)/COMF44.ERB
@@ -38,8 +38,8 @@ ELSE
 ENDIF
 SIF BASE:기력 + LOCAL:1 >= MAXBASE:기력
 	LOCAL:1 = MAXBASE:기력 - BASE:기력
-;기력이 다한 경우, 기력이 회복되지 않는다
-SIF BASE:기력 == 0
+;[스태미나] 가 없으며 기력이 다한 경우, 기력이 회복되지 않는다
+SIF BASE:기력 == 0 && TALENT:스태미나 == 0
 	LOCAL:1 = 0
 BASE:기력 += LOCAL:1
 
