--- a/●개발자용 자료/各種テンプレ/SLANGの切り替え条件1「実況」.ERB
+++ b/●개발자용 자료/各種テンプレ/SLANGの切り替え条件1「実況」.ERB
@@ -66,7 +66,7 @@ ENDIF
 ;**********************************************************
 ;전투 상황일 경우
 ;*************************
-IF (TCVAR:12 & 끈적끈적)
+IF (TCVARn:12 & 끈적끈적)
 	SLANGWORD_XXXX+=""
 ENDIF
 
