--- a/●개발자용 자료/各種テンプレ/豹変型_口上テンプレ.ERB
+++ b/●개발자용 자료/各種テンプレ/豹変型_口上テンプレ.ERB
@@ -18,8 +18,8 @@
 ;　BASE:Ａ결계내구력	
 ;　BASE:Ｂ결계내구력	
 ;
-;　TCVAR:2 == 자세：봉사한다		奉仕フラグが立っている状態です。望むと望まざるとに関わらず、積極的に奉仕している状態です。
-;　TCVAR:2 == 자세：Ｖ방어		Ｖ삽입방어 플래그が立っている状態です。Ｖに挿入できませんが、触れられているので快楽は感じます。
+;　TCVARn:2 == 자세：봉사한다		奉仕フラグが立っている状態です。望むと望まざるとに関わらず、積極的に奉仕している状態です。
+;　TCVARn:2 == 자세：Ｖ방어		Ｖ삽입방어 플래그が立っている状態です。Ｖに挿入できませんが、触れられているので快楽は感じます。
 ;
 ;　IF CHECK_PREGNANT_F(TARGET) > 0	임신しているかどうかを判定します。正の値であれば임신 중です。
 ;
@@ -983,9 +983,9 @@ ENDIF
 ;--------------------------------------------------
 @KOJO_0_SEX_COM3
 ;膣に挿入され、犯されます。
-;TCVAR:2 == 자세：Ｖ방어のときはＶに挿入されません。
+;TCVARn:2 == 자세：Ｖ방어のときはＶに挿入されません。
 ;Ｖ감각が0のときは고통が強く、Ｖ감각が4以上なら強烈な快感を感じます。
-IF TCVAR:2 == 자세：Ｖ방어
+IF TCVARn:2 == 자세：Ｖ방어
 ELSEIF ABL:Ｖ감각 == 0
 ELSEIF ABL:Ｖ감각 >= 4
 ENDIF
@@ -1103,7 +1103,7 @@ IF FLAG:110 && (TALENT:(FLAG:111):기생 == 0 || FILTER_CHECK_F(13) > 0)
 	;흑화 캐릭터가 相手の場合
 ELSEIF LOCALS:0 == "Ｈ촉수"
 	;Ｈ촉수が相手の場合
-ELSEIF (MESSAGE_BRANCH_F(TARGET) & 타락) || TCVAR:2 == 자세：봉사한다
+ELSEIF (MESSAGE_BRANCH_F(TARGET) & 타락) || TCVARn:2 == 자세：봉사한다
 ELSE
 ENDIF
 IF CFLAG:1 > 0
@@ -1142,7 +1142,7 @@ ENDIF
 ;COM13：절정 금지
 ;--------------------------------------------------
 @KOJO_0_SEX_COM13
-IF TCVAR:40
+IF TCVARn:40
 	;절정 금지を解除した場合
 ELSE
 	;절정 금지した場合
